--- a/概统笔记.md
+++ b/概统笔记.md
@@ -300,20 +300,25 @@ $$
 
 ### 特殊模型
 
+* **泊松分布**
+
 $$
---泊松分布--\\
 E(X) = \sum_{k=0}^{+\infty}k \frac{e^{-\lambda}\lambda^k}{k!}
 = 0 + \lambda e^{-\lambda} \sum_{k'=1}^{+\infty}\frac{\lambda^{(k'-1)}}{(k'-1)!}
 = \lambda e^{-\lambda} \cdot e^\lambda = \lambda
-\\
---指数分布--\\
+$$
+
+- **指数分布**
+
+$$
 E(X) = \int_{0}^{+\infty} x \cdot (\lambda e^{-\lambda x})dx
 \xlongequal{分部求导} -(xe^{-\lambda x})|_{x=0}^{+\infty} + \int_{0}^{+\infty}e^{-\lambda x}dx
 = \frac 1 \lambda
-\\
---标准N--\\
-E(X) = 0
 $$
+
+- **标准N**
+
+$E(X) = 0$
 
 ### 随机变量函数
 
@@ -322,4 +327,18 @@ Y= g(X), 且 \sum/\int |g(x)|f(x) 存在（绝对收敛） \Longrightarrow E(Y) 
 h(X,Y)，若\int h(x,y)dxdy绝对收敛 \Longrightarrow E(h(X,Y))
 = \iint h(x,y)f(x,y)dxdy\\
 $$
+
+### 性质
+
+**线性组合**
+
+$E(c_0 + \sum_{i=1}^n c_iX_i) = c_0 + \sum_{i=1}^nE(X_i)$
+
+**独立**
+
+$X,Y独立 \Longrightarrow E(XY) = E(X)E(Y) \\ *此结论为必要不充分条件$
+
+### EG
+
+Ex1.不运用分布律求解期望(一般利用独立性)
 
