--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -275,3 +275,65 @@ input wire s1;
 reg [7:0] C;
 ```
 
+
+
+## Ch4 时序电路
+
+### 基础模块
+
+#### SR锁存器（NOR）
+
+| 状态           | S    | R    | Q    | Qn   |
+| -------------- | ---- | ---- | ---- | ---- |
+| 保持           | 0    | 0    | Q    | Qn   |
+| 置位           | 1    | 0    | 1    | 0    |
+| 置位           | 0    | 0    | 1    | 0    |
+| 复位           | 0    | 1    | 0    | 1    |
+| 复位           | 0    | 0    | 0    | 1    |
+| 未定义（同时） | 1    | 1    | x    | x    |
+
+#### $\overline{S}\overline{R}$锁存器（NAND）
+
+| 状态           | Sn   | Rn   | Q    | Qn   |
+| -------------- | ---- | ---- | ---- | ---- |
+| 保持           | 1    | 1    | Q    | Qn   |
+| 置位           | 0    | 1    | 1    | 0    |
+| 置位           | 1    | 1    | 1    | 0    |
+| 复位           | 1    | 0    | 0    | 1    |
+| 复位           | 1    | 1    | 0    | 1    |
+| 未定义（同时） | 0    | 0    | x    | x    |
+
+#### SR触发器（Clocked SR Latch）
+
+**两种实现方式**
+
+- 2*NAND2 + NAND_Latch
+- 2*AND2 + NOR_Latch
+
+| 状态   | C    | S    | R    |
+| ------ | ---- | ---- | ---- |
+| 不变   | 0    | x    | x    |
+| 不变   | 1    | 0    | 0    |
+| 复位   | 1    | 0    | 1    |
+| 置位   | 1    | 1    | 0    |
+| 未定义 | 1    | 1    | 1    |
+
+#### D锁存器
+
+D指的是Data
+
+| 状态 | C    | D    |
+| ---- | ---- | ---- |
+| 不变 | 0    | x    |
+| 复位 | 1    | 0    |
+| 置位 | 1    | 1    |
+
+#### 局限
+
+##### 时序问题
+
+一个触发周期内会一直改变输出无法只改变一次，会不断变化（称为分块）
+
+### 进阶
+
+#### 触发器
