--- a/概统笔记.md
+++ b/概统笔记.md
@@ -62,13 +62,18 @@ $$
 
 ### 连续型(均匀、正态、指数)
 
+**UD**
+
+$nota: X \sim U(a,b)\\$
+
+**ND**
 $$
---UD--\\
-nota: X \sim U(a,b)\\
---ND--\\
 nota: X \sim N(\mu, \sigma^2)\\
 f(x) = \frac 1 {\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}\\
---exp\ D--\\
+$$
+
+**exp D**
+$$
 nota:X \sim E(\lambda)\\
 f(x) = 
 \left \{ \begin{array}{}
@@ -80,7 +85,7 @@ F(x) =
 	1 - e^{-\lambda x} & ,x > 0\\
 	0 & ,x \leqslant 0\\
 \end{array}\right.\\
-CHAR: P(X > t_0 + t | X > t_0) = P (X > t)\\
+无记忆性: P(X > t_0 + t | X > t_0) = P (X > t)\\
 $$
 
 ### 正态分布概率计算
@@ -291,36 +296,36 @@ $$
 
 ## Ch4
 
-### 定义
+### 期望
+
+#### 定义
 
 $$
 E(X) = \sum_{i=i_0}^{+\infty}x_ip_i\\
 E(X) = \int_{-\infty}^{+\infty} xf(x)dx
 $$
 
-### 特殊模型
+#### 特殊模型
 
 * **泊松分布**
-
-$$
-E(X) = \sum_{k=0}^{+\infty}k \frac{e^{-\lambda}\lambda^k}{k!}
-= 0 + \lambda e^{-\lambda} \sum_{k'=1}^{+\infty}\frac{\lambda^{(k'-1)}}{(k'-1)!}
-= \lambda e^{-\lambda} \cdot e^\lambda = \lambda
-$$
+  $$
+  E(X) = \sum_{k=0}^{+\infty}k \frac{e^{-\lambda}\lambda^k}{k!}
+  = 0 + \lambda e^{-\lambda} \sum_{k'=1}^{+\infty}\frac{\lambda^{(k'-1)}}{(k'-1)!}
+  = \lambda e^{-\lambda} \cdot e^\lambda = \lambda
+  $$
 
 - **指数分布**
-
-$$
-E(X) = \int_{0}^{+\infty} x \cdot (\lambda e^{-\lambda x})dx
-\xlongequal{分部求导} -(xe^{-\lambda x})|_{x=0}^{+\infty} + \int_{0}^{+\infty}e^{-\lambda x}dx
-= \frac 1 \lambda
-$$
+  $$
+  E(X) = \int_{0}^{+\infty} x \cdot (\lambda e^{-\lambda x})dx
+  \xlongequal{分部求导} -(xe^{-\lambda x})|_{x=0}^{+\infty} + \int_{0}^{+\infty}e^{-\lambda x}dx
+  = \frac 1 \lambda
+  $$
 
 - **标准N**
 
-$E(X) = 0$
+  $E(X) = 0$
 
-### 随机变量函数
+#### 随机变量函数
 
 $$
 Y= g(X), 且 \sum/\int |g(x)|f(x) 存在（绝对收敛） \Longrightarrow E(Y) = \int_{-\infty}^{+\infty} g(x)f(x)dx\\
@@ -328,7 +333,7 @@ h(X,Y)，若\int h(x,y)dxdy绝对收敛 \Longrightarrow E(h(X,Y))
 = \iint h(x,y)f(x,y)dxdy\\
 $$
 
-### 性质
+#### 性质
 
 **线性组合**
 
@@ -338,7 +343,162 @@ $E(c_0 + \sum_{i=1}^n c_iX_i) = c_0 + \sum_{i=1}^nE(X_i)$
 
 $X,Y独立 \Longrightarrow E(XY) = E(X)E(Y) \\ *此结论为必要不充分条件$
 
-### EG
+#### EG
 
-Ex1.不运用分布律求解期望(一般利用独立性)
+**Ex1**.不运用分布律求解期望(一般利用独立性)
 
+1. 电梯载12人，10层楼全下完，求停留次数X期望
+   $$
+   X_i = 
+   \left \{ \begin{array}{}
+   	1,i层有人下\\
+   	0,i层无人下\\
+   \end{array} \right.
+   \\
+   则X = \sum X_i
+   \\
+   E(X_i) = P(X_i = 1) = 1 - 0.9^{12}
+   \\
+   E(X) = 10E(X_i) =
+   $$
+   
+2. n人互赠礼物，求拿到自己礼物人数期望
+   $$
+   E(X) = n \times \frac1n = 1
+   $$
+
+### 方差
+
+#### 定义
+
+nota: $Var(X), D(X), V(X)$
+
+Def: $D(X) = E\{[X-E(X)]^2\}$
+
+**导出定理**
+$$
+D(X) = E(X^2) - E^2(X)
+$$
+
+#### 性质
+
+**方差特性**
+
+$Var(aX) = a^2 Var(X)$
+
+$Var(X) = 0 \Longleftrightarrow P(X=const) = 1, const = E(X)$
+
+**线性组合**
+
+$Var(X+Y) = Var(X)+Var(Y) +2E\{[X-E(X)][Y-E(Y)]\}$
+
+$协方差Cov(X,y) \triangleq E\{[X-E(X)][Y-E(Y)]\}$
+
+**独立性**
+
+$独立\Longrightarrow Cov(X,Y) = 0 \Longrightarrow Var(aX+bY+c) = a^2Var(X) + b^2Var(Y)$
+
+Proof：
+$$
+E\{[X-E(X)][Y-E(Y)]\}
+\xlongequal{独立} E(X-E(X)) \times E(Y-E(Y))
+\\
+= (E(X)-E(X)) \times (E(Y)-E(Y))
+= 0
+$$
+
+
+#### 模型
+
+- **0-1分布**
+
+  $Var(X) = p(1-p)$
+
+- **泊松分布**
+
+- **均匀分布**
+
+- **二项分布**
+  
+  **暴力算法**
+  
+  $X \sim B(n,p)	\\	E(X) = \sum_{k=1}^n k(\frac{n!}{k!(n-k)!})p^k(1-p)^{n-k}	\\	= np \sum_{k=1}^n (\frac{(n-1)!}{(k-1)!(n-k)!})p^{k-1}(1-p)^{n-k}	\\	= np \sum_{k=1}^n C_{n-1}^{k-1}p^{k-1}(1-p)^{(n-1)-(k-1)}	\\	= np$
+  
+  **利用独立性和两点分布结论与方差**
+  
+  - $E(X) = E(\sum X_i) = \sum E(X_i) = np$
+  
+  - $Var(X) = Var(\sum X_i) = \sum Var(X_i) = np(1-p)$
+  
+- **正态分布**
+
+  - E(X) = μ
+  - VAr(X) = σ^2^
+
+  **标准正态分布**
+
+  - E(X) = 0
+  - Var(X) = 1
+
+|      |      |      |
+| ---- | ---- | ---- |
+|      |      |      |
+|      |      |      |
+|      |      |      |
+|      |      |      |
+|      |      |      |
+|      |      |      |
+
+**Ex**.
+
+X~P($\lambda$)，求E(X(X-1)(X-2))
+
+$E() = \sum_{k=0}^\infty k(k-1)(k-2)\frac{\lambda^k e^{-\lambda}}{k!} = \sum_{k=3}^\infty \frac{\lambda^k e^{-\lambda}}{(k-3)!} = \lambda^3$
+
+#### 正态分布性质
+
+$X-Y \sim N(\mu_1-\mu_2, \sigma_1^2 + \sigma_2^2)$
+
+$标准化变量X^* = \frac{X - \mu}{\sigma}$
+
+### 协方差
+
+#### 定义
+
+$Cov(X,y) \triangleq E\{[X-E(X)][Y-E(Y)]\}$
+
+**计算公式**
+
+$Cov(X,Y) = E(XY) -E(X)E(Y)$
+
+#### 性质
+
+**线性性质**
+
+$Cov(aX,bY) = ab \cdot Cov(X,Y)$
+
+$Cov(X_1+X_2,Y) = Cov(X_1,Y) +Cov(X_2,Y)$
+
+**特殊**
+
+$Var(X)Var(Y) \neq 0时，Cov^2(X,Y) \leqslant Var(X)Var(Y)，当且仅当X与Y有严格线性关系时取等$
+
+**Ex**.
+
+$Cov(aX+bY,cX+dY) = $
+
+$Cov(aX+bY+c) = $
+
+$Var(\sum X_i) = $
+
+### 相关系数ρ
+
+#### 定义
+
+$\rho_{XY} = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}	\\	= Cov(\frac{X-E(X)}{\sqrt{Var(X)}},\frac{Y-E(Y)}{\sqrt{Var(Y)}})$
+
+#### 性质
+
+$|\rho| \leqslant 1$
+
+$|\rho| = 1 \Longleftrightarrow \exist 常数a,b, s.t.P(Y = a + bX) = 1, \\ 特别的,\left\{\begin{array}{}	\rho = 1, b>0 \\ \rho = -1, b<0	\end{array}\right.$
