--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -4,9 +4,9 @@
 
 ## *Electric
 
-> 引入常量：$\epsilon_0 = 8.854 \times 10^{-12} F \cdot m$
+> 引入常量：$\varepsilon_0 = 8.854 \times 10^{-12} F \cdot m$
 >
-> $[\epsilon_0] = F \cdot m = C \cdot V^{-1} \cdot m$ 
+> $[\varepsilon_0] = F \cdot m = C \cdot V^{-1} \cdot m$ 
 
 ### Ch22-2 Electric Field
 
@@ -22,7 +22,7 @@ $\vec p=q\cdot \vec d\ (\vec d方向从-q到+q)$
 
 推导很麻烦，结论也不好记，看看就好吧能记尽量记
 
-$\vec{E_p} = \frac1{4\pi\epsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})$($\vec r$为从dipole中心到该点的位移矢量)
+$\vec{E_p} = \frac1{4\pi\varepsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})$($\vec r$为从dipole中心到该点的位移矢量)
 
 ##### 能量
 
@@ -33,17 +33,17 @@ $U = W_{+q\rightarrow\infty}+W_{-q\rightarrow\infty} = qU_+ +(-q)U_- = q(U_+-U_-
 **==一些较复杂的可通过求电势的方向导数获得==**(Ex.大物P44)
 
 
-- 无限大带电平面：$E=\frac{\sigma}{2\epsilon_0}$
-- 有限长带电棒任意点：$\left\{\begin{array}{}	E_x = \frac{\lambda}{4\pi\epsilon_0z}(sin\theta_2-sin\theta_1)\\E_y = \frac{\lambda}{4\pi\epsilon_0z}(cos\theta_1-cos\theta_2)	\end{array}\right.$(大物P17，挺好算的)
+- 无限大带电平面：$E=\frac{\sigma}{2\varepsilon_0}$
+- 有限长带电棒任意点：$\left\{\begin{array}{}	E_x = \frac{\lambda}{4\pi\varepsilon_0z}(sin\theta_2-sin\theta_1)\\E_y = \frac{\lambda}{4\pi\varepsilon_0z}(cos\theta_1-cos\theta_2)	\end{array}\right.$(大物P17，挺好算的)
 
-  - 有限长带电棒中点：$E = \frac{Q}{4\pi\epsilon_0}\frac{1}{z\sqrt{(\frac L 2)^2+z^2}}$
-  - 无限长带电棒：$E=\frac{\lambda}{2\pi\epsilon_0r}$
-- 带电圆环：$E=\frac{1}{4\pi\epsilon_0}\frac{\lambda(2\pi R)z}{(R^2+z^2)^\frac{3}{2}}\hat k=\frac{Q}{4\pi\epsilon_0}\frac{z}{(R^2+z^2)^\frac{3}{2}}\hat k$
+  - 有限长带电棒中点：$E = \frac{Q}{4\pi\varepsilon_0}\frac{1}{z\sqrt{(\frac L 2)^2+z^2}}$
+  - 无限长带电棒：$E=\frac{\lambda}{2\pi\varepsilon_0r}$
+- 带电圆环：$E=\frac{1}{4\pi\varepsilon_0}\frac{\lambda(2\pi R)z}{(R^2+z^2)^\frac{3}{2}}\hat k=\frac{Q}{4\pi\varepsilon_0}\frac{z}{(R^2+z^2)^\frac{3}{2}}\hat k$
 
-  - 带电圆盘：$\frac{\sigma}{2\epsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k$
+  - 带电圆盘：$\frac{\sigma}{2\varepsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k$
     
-    - $当z\gg R，等效为点电荷，\frac{z}{\sqrt{z^2+R^2}}=[1+\frac{R^2}{z^2}]^{-\frac1 2}\approx 1-\frac 1 2\frac{R^2}{z^2}，代入得E=\frac{Q}{4\pi \epsilon_0z^2}\hat k\\$
-    - $当R\gg z，等效为无限面，E=\frac{\sigma}{2\epsilon_0}\hat k\\$
+    - $当z\gg R，等效为点电荷，\frac{z}{\sqrt{z^2+R^2}}=[1+\frac{R^2}{z^2}]^{-\frac1 2}\approx 1-\frac 1 2\frac{R^2}{z^2}，代入得E=\frac{Q}{4\pi \varepsilon_0z^2}\hat k\\$
+    - $当R\gg z，等效为无限面，E=\frac{\sigma}{2\varepsilon_0}\hat k\\$
 - 球、球壳均可等效为点电荷。
 
 ### Ch23 Gauss's Law
@@ -141,7 +141,7 @@ $$
 #### 电势
 
 $$
-从点电荷出发，V_i(r_i)=\int_r^\infty\frac{q_i}{4\pi\epsilon_0{r_i}^2}dr=\frac{q_i}{4\pi\epsilon_0r_i}，因此V=\Sigma V_i(r_i)=\frac 1{4\pi\epsilon_0}\Sigma\frac{q_i}{r_i}；\\
+从点电荷出发，V_i(r_i)=\int_r^\infty\frac{q_i}{4\pi\varepsilon_0{r_i}^2}dr=\frac{q_i}{4\pi\varepsilon_0r_i}，因此V=\Sigma V_i(r_i)=\frac 1{4\pi\varepsilon_0}\Sigma\frac{q_i}{r_i}；\\
 从电场出发，V=\int_r^\infty \vec E\cdot d\vec l\\
 $$
 
@@ -182,16 +182,16 @@ $$
 $$
 U = 
 \left \{ \begin{array}{}
-	互能：\frac 1 2\int \frac{Q}{4\pi \epsilon_0 R}dq = \frac{Q}{8\pi \epsilon_0 R} \int dq
+	互能：\frac 1 2\int \frac{Q}{4\pi \varepsilon_0 R}dq = \frac{Q}{8\pi \varepsilon_0 R} \int dq
 	\\
-	自能：\int_0^Q \frac{q}{4\pi \epsilon_0 R}dq
+	自能：\int_0^Q \frac{q}{4\pi \varepsilon_0 R}dq
 	\\
-	电容：\frac{Q^2}{2C} = \frac{Q^2}{2(4\pi \epsilon_0 R)}
+	电容：\frac{Q^2}{2C} = \frac{Q^2}{2(4\pi \varepsilon_0 R)}
 \end{array} \right \}
-= \frac{Q^2}{8 \pi \epsilon_0 R}
+= \frac{Q^2}{8 \pi \varepsilon_0 R}
 $$
 
-*第三种算法中$C = 4\pi \epsilon_0 (\frac{\infty R}{\infty - R})$。因为仅球壳外表面(外侧)带电，因此可视作由外表面到无穷远的电容器，也可算$V = \frac{Q}{4 \pi \epsilon_0 R}, C = \frac Q V$。*
+*第三种算法中$C = 4\pi \varepsilon_0 (\frac{\infty R}{\infty - R})$。因为仅球壳外表面(外侧)带电，因此可视作由外表面到无穷远的电容器，也可算$V = \frac{Q}{4 \pi \varepsilon_0 R}, C = \frac Q V$。*
 
 ### Ch25 Conductors
 
@@ -201,7 +201,7 @@ $$
 
 $$
 两个相距无限远的导电圆球，总电量为Q，用导线将两者表面相连，求电荷分布\\
-\frac{q_1}{4\pi\epsilon_0R_1}=\frac{q_2}{4\pi\epsilon_0R_2}\\
+\frac{q_1}{4\pi\varepsilon_0R_1}=\frac{q_2}{4\pi\varepsilon_0R_2}\\
 \Longrightarrow \frac {q_1} {q_2}= \frac {R_1} {R_2}
 $$
 
@@ -219,26 +219,26 @@ $$
 - **Parallel-Plate Capacitor**
 
 $$
-E=\frac \sigma {\epsilon_0}(G's\ Law)\\
-C=\frac{\epsilon_0A}d\\
+E=\frac \sigma {\varepsilon_0}(G's\ Law)\\
+C=\frac{\varepsilon_0A}d\\
 $$
 
 - **Cylindrical Capacitor**
 
 $$
-C=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
+C=2\pi\varepsilon_0\frac L{ln(R)-ln(r)}\\
 $$
 
 - **Spherical Capacitor**
 
 $$
-C=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
-=4\pi\epsilon_0(\frac{Rr}{R-r})
+C=\frac{4\pi\varepsilon_0}{\frac1r-\frac1R}
+=4\pi\varepsilon_0(\frac{Rr}{R-r})
 $$
 
 **单个平行板电容器，仅在向对面有电荷，外面不带电荷**
 
-==注意，平行板电容器的电场是$\frac \sigma {\epsilon_0}$。因为两板都有电荷，因此高斯定律得分成两部分计算==
+==注意，平行板电容器的电场是$\frac \sigma {\varepsilon_0}$。因为两板都有电荷，因此高斯定律得分成两部分计算==
 
 #### 串并联
 
@@ -248,7 +248,7 @@ $$
 
 ##### 应用
 
-<u>将导体插入平行板中，$C'=\frac{\epsilon_0A}{d-t}$(视作串联即可)</u>
+<u>将导体插入平行板中，$C'=\frac{\varepsilon_0A}{d-t}$(视作串联即可)</u>
 
 #### 能量
 
@@ -259,7 +259,7 @@ U =
 	\\
 	\frac{q \Delta V}{2}
 	\\
-	\frac{\epsilon_0 E^2 \Omega}{2}
+	\frac{\varepsilon_0 E^2 \Omega}{2}
 \end{array} \right.
 $$
 
@@ -278,10 +278,10 @@ $$
 
 $$
 (由平行板电容器推出的普适结论)\\
-U=\frac{q^2}{2C}=\frac{q^2d}{2\epsilon A}=\frac{\epsilon}2(\frac q{\epsilon A})^2(Ad)=\frac{\epsilon}2E^2\Omega\\
+U=\frac{q^2}{2C}=\frac{q^2d}{2\varepsilon A}=\frac{\varepsilon}2(\frac q{\varepsilon A})^2(Ad)=\frac{\varepsilon}2E^2\Omega\\
 u=\frac U \Omega
 \\
-=\frac{\epsilon E^2}2
+=\frac{\varepsilon E^2}2
 \\
 = \frac12 DE
 $$
@@ -299,15 +299,15 @@ $$
 \end{array} \right.
 \\
 另外有，\\
-\because \frac{Q}{\epsilon_0A}
-= \frac {(Q_0 - Q')}{\epsilon_0A}
+\because \frac{Q}{\varepsilon_0A}
+= \frac {(Q_0 - Q')}{\varepsilon_0A}
 \xlongequal[始终成立]{GaussLaw} E
 = \frac {E_0}{\kappa_e}
-= \frac {Q_0} {\kappa_e \epsilon_0 A}
+= \frac {Q_0} {\kappa_e \varepsilon_0 A}
 \\
 \therefore Q_0
 = \kappa_e (Q_0 - Q') \longrightarrow Q'
-= (1-\frac 1 {\epsilon_e})Q_0
+= (1-\frac 1 {\varepsilon_e})Q_0
 $$
 
 ==不要忘了最基本的这几个==
@@ -353,13 +353,13 @@ $$
 
 for general isotropic(各向同性) materials
 $$
-\vec P = \chi_e \epsilon_0 \vec E\\
+\vec P = \chi_e \varepsilon_0 \vec E\\
 其中，\chi_e = \kappa_e - 1
 $$
 
 #### Electric displacement vector $\vec D$ (电位移矢量)
 
-$\vec D = \epsilon_0 \vec E + \vec P\\ = \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E = (\kappa_e \epsilon_0) \vec E$
+$\vec D = \varepsilon_0 \vec E + \vec P\\ = \varepsilon_0 \vec E + \chi_e \varepsilon_0 \vec E = (\kappa_e \varepsilon_0) \vec E$
 
 **产生原因**：
 $$
@@ -370,7 +370,7 @@ $$
 
 $\oiint \vec D \cdot d \vec A= \Sigma_{i}q_0$(介质中的高斯定理)
 
-==因此计算时可以使用介质中的高斯定理求出D，进而用$\vec D = \kappa_e \epsilon_0 \vec E$求出E==
+==因此计算时可以使用介质中的高斯定理求出D，进而用$\vec D = \kappa_e \varepsilon_0 \vec E$求出E==
 
 **Proof**:
 $$
@@ -378,24 +378,24 @@ $$
 \oiint \vec P \cdot d \vec A = - \sum_{ins} q'？？？
 (\sigma' = P，然后负号是因为定义d\vec A方向向外而\vec P是向内的？)
 \\取一个包住内表面的高斯面\\
-\therefore \epsilon_0 \oiint \vec E \cdot d \vec A
+\therefore \varepsilon_0 \oiint \vec E \cdot d \vec A
 \xlongequal{Gauss} \sum_{ins} (q_0 + q')
 \xlongequal{上式} \sum_{ins}q_0 - \oiint \vec P \cdot d \vec A\\
-\therefore \oiint (\epsilon_0 \vec E + \vec P) \cdot d \vec A
+\therefore \oiint (\varepsilon_0 \vec E + \vec P) \cdot d \vec A
 = \sum_{ins}q_0\\
-\vec D \overset {\triangle} {=} \epsilon_0 \vec E + \vec P\\
+\vec D \overset {\triangle} {=} \varepsilon_0 \vec E + \vec P\\
 \therefore \oiint \vec D \cdot d \vec A
 = \sum_{i}q_0\\
 $$
 Also
 $$
-\vec D = \epsilon_0 \vec E + \vec P\\
-= \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E\\
-= (1+\chi_e)\epsilon_0 \vec E\\
-= \kappa_e \epsilon_0 \vec E
+\vec D = \varepsilon_0 \vec E + \vec P\\
+= \varepsilon_0 \vec E + \chi_e \varepsilon_0 \vec E\\
+= (1+\chi_e)\varepsilon_0 \vec E\\
+= \kappa_e \varepsilon_0 \vec E
 $$
 
-(非正规地写成：$\vec D = \epsilon_0 \vec E_0$)
+(非正规地写成：$\vec D = \varepsilon_0 \vec E_0$)
 
 证明用图：<img src="普物2笔记.assets/image-20191013182554314.png" alt="image-20191013182554314" style="zoom:35%;" />
 
@@ -405,23 +405,23 @@ $$
 
 <img src="普物2笔记.assets/page40image3039776.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
 $$
-同并联，C=\frac {\epsilon_0 \frac A2}{d}(\kappa_1+\kappa_2)
+同并联，C=\frac {\varepsilon_0 \frac A2}{d}(\kappa_1+\kappa_2)
 $$
 
 若上下两种电介质
 
 $$
-C_i = \frac{\kappa _i \epsilon_0 A}{d_i}\\
+C_i = \frac{\kappa _i \varepsilon_0 A}{d_i}\\
 $$
 
 ##### 复杂一点：Sepherical
 
 <img src="普物2笔记.assets/page41image3052000.jpg" alt="page41image3052000.jpg" style="zoom: 50%;" />
 $$
-\because C=4\pi\epsilon_e(\frac{Rr}{R-r})\\
-\frac1C=\frac1{4\pi\epsilon_0\kappa_1(\frac{ba}{b-a})}
-+\frac1{4\pi\epsilon_0\kappa_1(\frac{ba}{b-a})}\\
-\Longrightarrow C=\frac{4\pi\epsilon_0\kappa_1\kappa_2 abc}{\kappa_1a(c-b)+\kappa_2c(b-a)}
+\because C=4\pi\varepsilon_e(\frac{Rr}{R-r})\\
+\frac1C=\frac1{4\pi\varepsilon_0\kappa_1(\frac{ba}{b-a})}
++\frac1{4\pi\varepsilon_0\kappa_1(\frac{ba}{b-a})}\\
+\Longrightarrow C=\frac{4\pi\varepsilon_0\kappa_1\kappa_2 abc}{\kappa_1a(c-b)+\kappa_2c(b-a)}
 $$
 
 ### Ch27 Ohm's Law
@@ -452,7 +452,7 @@ $$
 
 **Ex.** Problem 12
 
-$\epsilon_1=10V,\epsilon_2=5V,R_1=R_2=R_3=4\Omega$
+$\varepsilon_1=10V,\varepsilon_2=5V,R_1=R_2=R_3=4\Omega$
 
 <img src="普物2笔记.assets/image-20191107184215773.png" alt="image-20191107184215773" style="zoom: 50%;" />
 $$
@@ -460,8 +460,8 @@ $$
 \\
 \left \{ \begin{array}{}
 	i_1 = i_2 + i_3\\
-	\epsilon_1-i_1R_1-i_3R_3 = 0\\
-	-i_2R_2-\epsilon_2+i_3R_3 = 0\\
+	\varepsilon_1-i_1R_1-i_3R_3 = 0\\
+	-i_2R_2-\varepsilon_2+i_3R_3 = 0\\
 \end{array} \right.
 \\\Longrightarrow i_1 = 1.25A, i_2 = 0
 $$
@@ -469,21 +469,23 @@ $$
 
 #### RC Circuit(串联RC)
 
+> $\tau = RC$
+
 ##### 充电
 
 $$
-\epsilon - iR - \frac q C = 0 \Longrightarrow 
-i = \frac{dq}{dt} = \frac{C\epsilon-q}{RC}
+\varepsilon - iR - \frac q C = 0 \Longrightarrow 
+i = \frac{dq}{dt} = \frac{C\varepsilon-q}{RC}
 \\
-\therefore \frac{dt}{RC} = \frac{dq}{C\epsilon-q}
+\therefore \frac{dt}{RC} = \frac{dq}{C\varepsilon-q}
 \\
 解微分方程得：
 \\
-q(t) \xlongequal{\tau \triangleq RC} C\epsilon(1-e^{-\frac t \tau})
+q(t) \xlongequal{\tau \triangleq RC} C\varepsilon(1-e^{-\frac t \tau})
 \\
-V(t) = \frac q C = \epsilon(1-e^{-\frac t \tau})
+V(t) = \frac q C = \varepsilon(1-e^{-\frac t \tau})
 \\
-i(t) = \frac{dq}{dt} = \frac \epsilon Re^{-\frac t \tau}
+i(t) = \frac{dq}{dt} = \frac \varepsilon Re^{-\frac t \tau}
 $$
 
 ##### 放电
@@ -491,7 +493,7 @@ $$
 $$
 q = q_0 e^\frac t \tau
 \\
-i = \frac \epsilon Re^{-\frac t \tau}
+i = \frac \varepsilon Re^{-\frac t \tau}
 $$
 
 
@@ -542,10 +544,13 @@ $$
 > 由于没有发现单独存在的[磁单极子](https://baike.baidu.com/item/磁单极子/380283)，因此磁偶极子的物理模型不是两个[磁单极子](https://baike.baidu.com/item/磁单极子/380283)，而是一段封闭回路电流。
 
 <img src="普物2笔记.assets/image-20191025161954395.png" alt="image-20191025161954395" style="zoom: 33%;" />
+
+> 引入磁偶极矩$\vec \mu = Ni \vec A$
+>
+> 一般[磁性物质](https://zh.wikipedia.org/wiki/磁性物質)的磁场，其[泰勒展开](https://zh.wikipedia.org/wiki/泰勒展开)的[多极展开式](https://zh.wikipedia.org/wiki/多極展開式)，由于[磁单极子](https://zh.wikipedia.org/wiki/磁單極子)项目恒等于零，第一个项目是[磁偶极子](https://zh.wikipedia.org/wiki/磁偶極子)项、第二个项目是[磁四极子](https://zh.wikipedia.org/wiki/磁四極子)（quadrupole）项，以此类推。磁矩也分为磁偶极矩、磁四极矩等等部分。从磁矩的磁偶极矩、磁四极矩等等，可以分别计算出磁场的磁偶极子项目、磁四极子项目等等。随着距离的增远，磁偶极矩部分会变得越加重要，成为主要项目，因此，磁矩这术语时常用来指称磁偶极矩。有些教科书内，磁矩的定义与磁偶极矩的定义相同[[1\]](https://zh.wikipedia.org/wiki/磁矩#cite_note-Jackson1999-1)。
+
 $$
-\vec \mu = Ni \vec A
-\\
-\tau = \mu B sin<\vec \mu, \vec B>
+磁偶极子在磁场中所受力矩：\tau = \mu B sin<\vec \mu, \vec B>
 \\
 \vec \tau = \vec \mu \times \vec B
 \\
@@ -588,21 +593,14 @@ $$
 
 ---
 
-* **长直导线**：
-
-$$
-\left \{ \begin{array}{}
-	中部：B = \frac{\mu_0i}{2 \pi R}\\
-	一端：B = \frac{\mu_0i}{4 \pi R}?\\
-\end{array} \right.\\
-$$
+* **长直导线**：$\left \{ \begin{array}{} 中部：B = \frac{\mu_0i}{2 \pi R}\\ 一端：B = \frac{\mu_0i}{4 \pi R} \\ \end{array} \right.$
 
 * **弧形(单层单匝)导线圆心**：$B = \frac{\mu_0i\varphi}{4\pi R}(\varphi \leqslant 2\pi)$
 
 * **距圆导线圆心L处**：$B= \frac{\mu_0 i R^2}{2(L^2 + R^2)^\frac 3 2} \\ (用BS定律而不是用圆环的结论-FMH's\ Slide\ 27,\ WYW的没有)$
 
 
-##### Conclusion2 coil
+##### Conclusion2-coil
 
 \* $[n] = \frac 1 m$ The number of turns per unit length 单位长度匝数
 
@@ -621,7 +619,7 @@ $$
 
 <img src="普物2笔记.assets/image-20191028194018555.png" alt="image-20191028194018555" style="zoom: 50%;" />
 
-##### Conclusion3 parallel current
+##### Conclusion3-Parallel Current
 
 $$
 F_{12}= F_{21} = \frac{\mu_0i_1i_2L}{2\pi d}\\
@@ -629,14 +627,9 @@ $$
 
 #### 粒子生磁
 
-$$
-d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \hat r}{r^2}
-= \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \vec r}{r^3}\\
-i = \frac{dq}{dt}\\
-id\vec s = \vec vdq,\ when\ there\ is\ only\ one\ particle\ carrying\ a\ single\ charge,\ dq = q\\
-d\vec B = \frac{\mu_0}{4\pi} \frac{dq\ \vec v \times \hat r}{r^2} 
-\therefore \vec B = \frac{\mu_0}{4\pi} \frac{q\ \vec v \times \hat r}{r^2}
-$$
+$d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec s \times \vec r}{r^3}, i = \frac{dq}{dt} \Longrightarrow id\vec s = \vec vdq,$ when there is only one particle carrying a single charge, $dq = q, d\vec B = \frac{\mu_0}{4\pi} \frac{dq\ \vec v \times \hat r}{r^2}$
+
+$\therefore \vec B = \frac{\mu_0}{4\pi} \frac{q\ \vec v \times \hat r}{r^2}$
 
 #### Ampere Circuital Theorem(电生磁)
 
@@ -648,13 +641,13 @@ $\mathop\oint_L \vec B \cdot d\vec l = \mu_0 \sum i_{ins}(\forall surface\ bound
 
 若导线有限长，则必存在一曲面使得该面上净电流为0，因此安培定律不适用
 
-### Ch31 Self-Induction
+### Ch31 Electromagnetic-Induction
 
 #### Gauss's Law
 
 $$
 \left \{ \begin{array}{}
-	\Phi_E = \oint \vec E \cdot d\vec A = \frac{q_i}{\epsilon_0}\\
+	\Phi_E = \oint \vec E \cdot d\vec A = \frac{q_i}{\varepsilon_0}\\
 	\Phi_B = \oint \vec B \cdot d\vec A = 0\\
 \end{array} \right.
 $$
@@ -662,39 +655,98 @@ $$
 #### Faraday’s Law(感应电动势)
 
 $$
-\epsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt} 【s为长度量】
+\varepsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt} 【s为长度量】
 $$
 
 #### Inductance
 
+> 引入$自感系数L = \frac{N\Phi_B}{i},\Psi_B = N\Phi_B=Li$
+
+结合法拉第电磁感应定律， $varepsilon_L = -\frac{d\Psi_B}{dt} = -L\frac{di}{dt}$
+
+##### Conclusion
+
+* **Solenoid**
+
+  $L = \frac{(nl) (\mu_0 ni) S}{i} = \mu_0n^2lS$
+
+* **Toroid**
+
+  > h为螺绕环厚度
+
+  $L = \frac{N\int_a^b(\frac{\mu_0iN}{2\pi r})(hdr)}{i} = \frac{\mu_0 N^2 h}{2\pi}ln\frac b a$
+
+#### 感应电动势
+
 $$
-Def: L = \frac{N\Phi_B}{i},\Psi_B = N\Phi B=Li
+L = \frac{N\Phi_B}{i}，单位为H
 \\
-\frac L l = \mu_0n^2A(solenoid)
-\\
-Combine\ FL,\ \Phi_L = -\frac{d\Psi_B}{dt} = -L\frac{di}{dt}
+\varepsilon_L = -\frac{d\Psi_B}{dt} = -\frac{d(\frac{N\Phi_B}{i}i)}{dt} = -L\frac{di}{dt}
 $$
 
-#### 动生电动势
+##### 感生电动势
+
+* 
+
+##### 动生电动势
 
 $$
 \Delta V = -\int \vec E \cdot d \vec l = \int (\vec v \times \vec B) \cdot d \vec l
 $$
 
-#### 动感混合
+##### 动感混合
 
 Ex.
+
+1. **分开考虑**（使用矩形模型
+
+   $V_动 = v_\perp l_\perp B_{t_0}; \\ V_感 = A \frac{dB}{dt}; \\ V_合 = V_动+V_感;$
+
+2. **一起考虑**（推荐使用此种，防止出现错误
+
+   $\Phi = (B_{t_0} + \frac{dB}{dt}t)(A+vt \cdot l) \\ V = |-\frac{d\Phi}{dt}| = \frac{d(AB_{t_0}+(vlB_{t_0}+A\frac{dB}{dt})t)+o(dt)}{dt} = vlB_{t_0} + A \frac{dB}{dt};$
+
+#### 自感
+
+依然使用已知自感系数和法拉第定律通过$\varepsilon_L = -L\frac{di}{dt}$来进行计算
+
+#### LR电路
+
+> $\tau = \frac L R$
+
+<u>与RC电路对比着看</u>
 $$
-(使用矩形模型)
-\\---1---\\
-V_动 = v_\perp l_\perp B_{t_0};
-\\
-V_感 = A \frac{dB}{dt};
-\\
-V_合 = V_动+V_感;
-\\---2(推荐使用此种，防止出现错误)---\\
-\Phi = (B_{t_0} + \frac{dB}{dt}t)(A+vt \cdot l)
-\\
-V = |-\frac{d\Phi}{dt}| = \frac{d(AB_{t_0}+(vlB_{t_0}+A\frac{dB}{dt})t)+o(dt)}{dt}
-= vlB_{t_0} + A \frac{dB}{dt};
+\varepsilon - iR - L\frac{di}{dt} = 0
 $$
+此外，到$tau$时的电流还是0.63i和0.37i
+
+#### 磁场能量
+
+对上述LR电路，有$\varepsilon i = i^2 R + Li\frac{di}{dt}$，故$U_B = \int_0^i Lidi = \frac12Li^2$
+
+#### 互感
+
+> 在变化磁场中两个线圈之间存在互感：$\Phi_{12} = M_{12}i_1 \\ \Phi_{21} = M_{21}i_2 \\ $
+> 互感系数：$M = M_{12} = M_{21} = K\sqrt{L_1L_2}$
+
+$K\in[0,1]，平行嵌套时为1，垂直时为0$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+==[Chap.31-2.pdf](~/Documents/大二上/普物2_14/WYW课件/Chap.31-2.pdf)和[Chap.31-2.pdf](~/Documents/大二上/普物2_14/WYW课件/Chap.31-2.pdf)后有关于电场与磁场的对比==
