--- a/普物2重要公式.md
+++ b/普物2重要公式.md
@@ -1,16 +1,24 @@
+##### 电学
+
+###### 主要框架
+
+* 库仑定律
+* 高斯定律
+* 基尔霍夫斯基
+
 ###### 电场
 
 $$
 \vec p=q\cdot \vec d\ (\vec d方向从-q到+q)\\
-\vec E_{dipole}= \frac1{4\pi\epsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})
+\vec E_{dipole}= \frac1{4\pi\varepsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})
 \\
-E_盘 = \frac{\sigma}{2\epsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k\\
-\oint_S \vec E \cdot d\vec A=\frac{1}{ε0}\sum_{inside\ S}q_i\\
+E_盘 = \frac{\sigma}{2\varepsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k\\
+\oint_S \vec E \cdot d\vec A=\frac{1}{ε_0}\sum_{inside\ S}q_i\\
 $$
 ###### 电势
 
 $$
-V=\frac 1{4\pi\epsilon_0}\Sigma\frac{q_i}{r_i}
+V=\frac 1{4\pi\varepsilon_0}\Sigma\frac{q_i}{r_i}
 \\
 \Delta V=-\int_i^f\vec E\cdot d\vec l
 \\
@@ -22,13 +30,13 @@ $$
 ###### 电容
 
 $$
-E_{PP}=\frac \sigma {\epsilon_0}(G's\ Law两板分别算)\\
-C_{PP}=\frac{\epsilon_0A}d\\
-C_柱=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
-C_球=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
-=4\pi\epsilon_0(\frac{Rr}{R-r})\\
+E_{PP}=\frac \sigma {\varepsilon_0}(G's\ Law两板分别算)\\
+C_{PP}=\frac{\varepsilon_0A}d\\
+C_柱=2\pi\varepsilon_0\frac L{ln(R)-ln(r)}\\
+C_球=\frac{4\pi\varepsilon_0}{\frac1r-\frac1R}
+=4\pi\varepsilon_0(\frac{Rr}{R-r})\\
 U=\frac{q^2}{2C}=\frac{q\Delta V}2\\
-u_{PP}=\frac U \Omega=\frac{\epsilon_0E^2}2\\
+u_{PP}=\frac U \Omega=\frac{\varepsilon_0E^2}2\\
 $$
 
 ###### 电介质
@@ -46,11 +54,11 @@ Q_0 = \kappa (Q_0 - Q')
 \\
 P_{\vec n} = \sigma'
 \\
-\vec P = \chi_e \epsilon_0 \vec E
+\vec P = \chi_e \varepsilon_0 \vec E
 \\
 \mathop\oiint_s\vec P \cdot d \vec A = - \sum_{ins}q'_i
 \\
-\vec D = \epsilon_0 \vec E + \vec P = (\kappa_e \epsilon_0) \vec E
+\vec D = \varepsilon_0 \vec E + \vec P = (\kappa_e \varepsilon_0) \vec E
 \\
 \oiint \vec D \cdot d \vec A = \sum_{ins}q_0
 \\
@@ -63,13 +71,21 @@ i = nqAv_d; j = nqv_d
 \\
 \sum \Delta V_i = 0
 \\
-q_充(t) = C\epsilon(1-e^{-\frac t \tau})
+q_充(t) = C\varepsilon(1-e^{-\frac t \tau})
 \\
 $$
 
 ---
 
+##### 磁学
+
 新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
+
+###### 主要框架
+
+* 毕奥萨瓦尔
+* 安培环路
+* 法拉第电磁感应
 
 ###### 磁场力
 
@@ -107,7 +123,7 @@ $$
 ###### 磁生电
 
 $$
-\epsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt}
+\varepsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt}
 \\
 $$
 
