--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -56,7 +56,7 @@ $d\Omega = sin\theta d\theta d\varphi$
 
 *Electeic Flux* 电通量
 $$
-Gauss'Law:\Phi=\oint_S \vec E \cdot d\vec A=\frac{1}{ε0}\sum_{inside\ S}q_i
+Gauss'Law:\Phi=\oint_S \vec E \cdot d\vec A=\frac{1}{\varepsilon_0}\sum_{ins}q_i
 $$
 
 无论导体是否有cavity，cavity里是否有charge，导体的电荷仅在表面(内/外)上有，导体内部无电荷。
@@ -197,13 +197,16 @@ $$
 
 #### 等势体
 
-##### Ex.
-
+**Ex**.
 $$
 两个相距无限远的导电圆球，总电量为Q，用导线将两者表面相连，求电荷分布\\
 \frac{q_1}{4\pi\varepsilon_0R_1}=\frac{q_2}{4\pi\varepsilon_0R_2}\\
 \Longrightarrow \frac {q_1} {q_2}= \frac {R_1} {R_2}
 $$
+
+#### Hall Effect
+
+正负有别：无论载流子带何种电荷，由于漂移方向不同，终是会偏向同一侧。
 
 ### Ch26-1 Capacitance
 
@@ -291,6 +294,8 @@ $$
 ### Ch26-2 Dielectrics
 
 Q一定时，X表示插入电介质后的量值，X~0~表示真空时的量值
+
+==不要忘了最基本的这几个==
 $$
 \left \{ \begin{array}{}
 	C=\kappa_eC_0\\
@@ -310,7 +315,7 @@ $$
 = (1-\frac 1 {\varepsilon_e})Q_0
 $$
 
-==不要忘了最基本的这几个==
+==注意：此处Q~0~表示**<u>极板上自由电荷(全程不变)</u>**，而Q’是电介质上induced电荷==
 
 ==本质上$\frac{E_0}{\kappa_e} = \frac{E}{1} = \frac{E'}{\kappa_e-1}$==
 
@@ -334,7 +339,7 @@ $$
 
 **一个重要结论**
 $$
-\mathop\oiint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i
+\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i
 $$
 
 #### Depolarization field E’ (退极化场)
@@ -361,33 +366,53 @@ $$
 
 $\vec D = \varepsilon_0 \vec E + \vec P\\ = \varepsilon_0 \vec E + \chi_e \varepsilon_0 \vec E = (\kappa_e \varepsilon_0) \vec E$
 
+**CXY猜想**：
+$$
+\left \{ \begin{array}{}
+	D = \varepsilon E
+	\\
+	P = \chi_E\varepsilon_0E
+\end{array} \right.
+\Longrightarrow
+\left \{ \begin{array}{}
+	D \sim E
+	\\
+	P \sim E_0-E
+\end{array} \right.
+$$
 **产生原因**：
 $$
 In\ Dielectric,\ \vec E \neq 0\\
 \vec {E_0} \longrightarrow \vec P \longrightarrow \sigma_e' \longrightarrow \vec{E'} \longrightarrow \vec E = \vec {E_0} + \vec {E'}\\
 $$
-##### 定理：环积分等于原电量
+##### 重要定理：环积分等于原电量
 
-$\oiint \vec D \cdot d \vec A= \Sigma_{i}q_0$(介质中的高斯定理)
+$\oint \vec D \cdot d \vec A= \Sigma_{i}q_0$(介质中的高斯定理)
 
 ==因此计算时可以使用介质中的高斯定理求出D，进而用$\vec D = \kappa_e \varepsilon_0 \vec E$求出E==
 
-**Proof**:
+**介质中的高斯定理的Proof**:
+
+在某电介质中，有带电+Q_0的球，
+
 $$
-在某电介质中，有带电+Q_0的球\\
-\oiint \vec P \cdot d \vec A = - \sum_{ins} q'？？？
-(\sigma' = P，然后负号是因为定义d\vec A方向向外而\vec P是向内的？)
-\\取一个包住内表面的高斯面\\
-\therefore \varepsilon_0 \oiint \vec E \cdot d \vec A
+\oint \vec P \cdot d \vec A = - \sum_{ins} q'
+(P = |\sigma'|，然后负号是因为定义d\vec A方向向外而\vec P是向内的？)
+$$
+
+取一个包住内表面的高斯面
+
+$$
+\therefore \varepsilon_0 \oint \vec E \cdot d \vec A
 \xlongequal{Gauss} \sum_{ins} (q_0 + q')
-\xlongequal{上式} \sum_{ins}q_0 - \oiint \vec P \cdot d \vec A\\
-\therefore \oiint (\varepsilon_0 \vec E + \vec P) \cdot d \vec A
+\xlongequal{上式} \sum_{ins}q_0 - \oint \vec P \cdot d \vec A\\
+\therefore \oint (\varepsilon_0 \vec E + \vec P) \cdot d \vec A
 = \sum_{ins}q_0\\
 \vec D \overset {\triangle} {=} \varepsilon_0 \vec E + \vec P\\
-\therefore \oiint \vec D \cdot d \vec A
-= \sum_{i}q_0\\
+\therefore \oint \vec D \cdot d \vec A
+= \sum_{ins}q_0\\
 $$
-Also
+**Also,**
 $$
 \vec D = \varepsilon_0 \vec E + \vec P\\
 = \varepsilon_0 \vec E + \chi_e \varepsilon_0 \vec E\\
@@ -401,7 +426,7 @@ $$
 
 #### 多种介电质(Dielectrics)
 
-##### PP
+**PP**
 
 <img src="普物2笔记.assets/page40image3039776.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
 $$
@@ -414,7 +439,7 @@ $$
 C_i = \frac{\kappa _i \varepsilon_0 A}{d_i}\\
 $$
 
-##### 复杂一点：Sepherical
+**复杂一点：Sepherical**
 
 <img src="普物2笔记.assets/page41image3052000.jpg" alt="page41image3052000.jpg" style="zoom: 50%;" />
 $$
@@ -549,19 +574,13 @@ $$
 >
 > 一般[磁性物质](https://zh.wikipedia.org/wiki/磁性物質)的磁场，其[泰勒展开](https://zh.wikipedia.org/wiki/泰勒展开)的[多极展开式](https://zh.wikipedia.org/wiki/多極展開式)，由于[磁单极子](https://zh.wikipedia.org/wiki/磁單極子)项目恒等于零，第一个项目是[磁偶极子](https://zh.wikipedia.org/wiki/磁偶極子)项、第二个项目是[磁四极子](https://zh.wikipedia.org/wiki/磁四極子)（quadrupole）项，以此类推。磁矩也分为磁偶极矩、磁四极矩等等部分。从磁矩的磁偶极矩、磁四极矩等等，可以分别计算出磁场的磁偶极子项目、磁四极子项目等等。随着距离的增远，磁偶极矩部分会变得越加重要，成为主要项目，因此，磁矩这术语时常用来指称磁偶极矩。有些教科书内，磁矩的定义与磁偶极矩的定义相同[[1\]](https://zh.wikipedia.org/wiki/磁矩#cite_note-Jackson1999-1)。
 
-$$
-磁偶极子在磁场中所受力矩：\tau = \mu B sin<\vec \mu, \vec B>
-\\
-\vec \tau = \vec \mu \times \vec B
-\\
-Energy\ U(\theta) = -\vec \mu \cdot \vec B
-\\
-For\ an\ orbiting\ electron,\ \mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,
-\\
-angular\ momentum(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv
-\\
-\therefore \vec \mu_{orb} = -\frac e {2m}\vec L_{orb}
-$$
+在磁场中力矩：$\vec \tau = \vec \mu \times \vec B$
+
+在磁场中能量：$U = -\vec \mu \cdot \vec B$
+
+对于圆周运动的电子，$\mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,$
+
+角动量：$(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv \\ \therefore \vec \mu_{orb} = -\frac e {2m}\vec L_{orb}$
 
 ### Ch30 Current – Produced Magnetic Fields 
 
@@ -641,7 +660,7 @@ $\mathop\oint_L \vec B \cdot d\vec l = \mu_0 \sum i_{ins}(\forall surface\ bound
 
 若导线有限长，则必存在一曲面使得该面上净电流为0，因此安培定律不适用
 
-### Ch31 Electromagnetic-Induction
+### Ch31-1 Electromagnetic-Induction
 
 #### Gauss's Law
 
@@ -655,14 +674,14 @@ $$
 #### Faraday’s Law(感应电动势)
 
 $$
-\varepsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt} 【s为长度量】
+\varepsilon = \oint \vec E \cdot d\vec l = -\frac{d\Phi _B}{dt}
 $$
 
 #### Inductance
 
 > 引入$自感系数L = \frac{N\Phi_B}{i},\Psi_B = N\Phi_B=Li$
 
-结合法拉第电磁感应定律， $varepsilon_L = -\frac{d\Psi_B}{dt} = -L\frac{di}{dt}$
+结合法拉第电磁感应定律， $\varepsilon_L = -\frac{d\Psi_B}{dt} = -L\frac{di}{dt}$
 
 ##### Conclusion
 
@@ -686,12 +705,18 @@ $$
 
 ##### 感生电动势
 
-* 
+$$
+\varepsilon = -\int \frac{\partial \vec B}{\partial t} \cdot d\vec A
+\\
+= \frac{dB}{dt}A/\frac{dA}{dt}B
+$$
 
 ##### 动生电动势
 
 $$
-\Delta V = -\int \vec E \cdot d \vec l = \int (\vec v \times \vec B) \cdot d \vec l
+\varepsilon = \int (\vec v \times \vec B) \cdot d \vec l
+\\
+= \vec l \cdot \vec v \times \vec B
 $$
 
 ##### 动感混合
@@ -722,31 +747,118 @@ $$
 
 #### 磁场能量
 
-对上述LR电路，有$\varepsilon i = i^2 R + Li\frac{di}{dt}$，故$U_B = \int_0^i Lidi = \frac12Li^2$
+对上述LR电路，有$\varepsilon i = i^2 R + Li\frac{di}{dt}$，故$\large U_B = \int_0^i Lidi = \frac12Li^2$
+
+另外能量密度为$\large u_B = \frac{B^2}{2\mu_0}$
 
 #### 互感
 
-> 在变化磁场中两个线圈之间存在互感：$\Phi_{12} = M_{12}i_1 \\ \Phi_{21} = M_{21}i_2 \\ $
-> 互感系数：$M = M_{12} = M_{21} = K\sqrt{L_1L_2}$
+> 互感系数：$M = M_{12} = M_{21}= \frac{d\Phi_{12}}{di_1} = \frac{d\Phi_{21}}{di_2} = K\sqrt{L_1L_2}$ ，其中$K\in[0,1]，平行嵌套时为1，垂直时为0$
 
-$K\in[0,1]，平行嵌套时为1，垂直时为0$
+两个线圈，穿过一个的磁通量与另一个的电流成线性关系：$\Phi_{12} = M_{12}i_1 \\ \Phi_{21} = M_{21}i_2 \\ $，系数称为[互感](https://zh.wikipedia.org/wiki/电感#互感)系数
 
+**Ex**.
 
+<img src="普物2笔记.assets/image-20191115170035079.png" alt="image-20191115170035079" style="zoom:25%;" />
 
+平行重叠情况的两个螺线管，管1中通电了
 
+1. 对管1：$B_1 = \mu_0 \mu_r \frac{N_1}{l}i_1 = \mu \frac{N_1}{l} i_1$
+2. 对管2：$\Phi_{12} = N_2B_1S = \mu \frac{N_1N_2}{l}i_1S$
+3. 所以有：$M = \mu \frac{N_1N_2}{l}S$
+4. 另外有：$L_1 = \mu \frac{N_1^2}{l}S, L_2 = \mu \frac{N_2^2}{l}S$
+5. 显然有：$M = \sqrt{L_1L_2}$
 
+**非恒流情况**：若$i_1$变化，则$\varepsilon_2 \xlongequal{法拉第} -\frac{d\Phi_{12}}{dt} = -M\frac{di_2}{dt}$，LC电路便是一种情况
 
+#### LC电路
 
+##### 无损耗
 
+$\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt} = -L\frac{d^2q}{dt^2}$
 
+获得二阶微分方程：$\large\frac{d^2q}{dt^2} + \frac{q}{\omega^2} = 0,\omega = \frac1{\sqrt{LC}} $
 
+解得$\left \{ \begin{array}{}	U_E = \frac{q_0^2}{2C}cos^2(\omega t + \varphi) \\ U_B = \frac{Lq_0^2\omega^2}{2}sin^2(\omega t + \varphi) \end{array}\right.$
 
+显然有：$\large U_E+U_B = \frac{q_0^2}{C} = Lq_0^2\omega^2$
 
+##### Damped and Forced oscillations
 
+<u>Damp</u>: *Physics* progressively reduce the amplitude of (an oscillation or vibration): *concrete structures* damp out *any vibrations*.
 
+**Ex**. 
 
+<img src="普物2笔记.assets/image-20191115200552404.png" alt="image-20191115200552404" style="zoom:25%;" />
 
+**有电流，求磁场能量**
 
+* 算法一，直接积分：$\large u_B = \frac1{2\mu_0}(\frac{\mu_0i}{2\pi r})^2 = \frac{\mu_0 i^2}{8\pi^2r^2}	\\	U_B = \int u_Bd\Omega = \int_a^b \frac{\mu_0 i^2}{8\pi^2r^2} (2\pi rdrl) = \frac{\mu_0 i^2 l}{4\pi}\ln\frac b a$
+* 算法二，算出电感套公式：$\large L = \frac{\Phi_B}i = \frac{\int_a^B \frac{\mu_0i}{2\pi r}ldr}i = \frac{\mu_0l}{2\pi}\ln\frac b a \\  U_B = \frac{Li^2}2 = \frac{\mu_0 i^2 l}{4\pi}\ln\frac b a$
 
+==[Chap.31-2.pdf](file:///Users/ulysses/Documents/大二上/普物2_14/WYW课件/Chap.31-2.pdf)和[Chap.31-3.pdf](file:///Users/ulysses/Documents/大二上/普物2_14/WYW课件/Chap.31-3.pdf)后有关于电场与磁场的对比==
 
-==[Chap.31-2.pdf](~/Documents/大二上/普物2_14/WYW课件/Chap.31-2.pdf)和[Chap.31-2.pdf](~/Documents/大二上/普物2_14/WYW课件/Chap.31-2.pdf)后有关于电场与磁场的对比==
+### Ch31-3 Magnetic Properties of Materials
+
+#### 磁化
+
+已知圆周电子的磁矩为$\vec \mu_{orb} = -\frac e {2m}\vec L_{orb}$
+
+顺磁抗磁的原理见大物课本
+
+| 电                                                           | 磁                                                           |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
+| $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
+| $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
+| $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
+| $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
+
+### Ch33 Nature of Electromagnetic Waves
+
+#### 位移电流
+
+> 定义$\large i_d = \varepsilon_0 \frac{d\Phi_E}{dt}$
+
+对于充电中的平行板电容器，安培环路定理在通过导线与通过两极板之间的磁感应强度环积分不匹配。传导电流强度为$i = \frac{dq}{dt} = A \frac{d\sigma}{dt}$，传导电流密度为$j = \frac{d\sigma}{dt}$；极板之间存在的电位移为$D = \sigma$，电位移通量为$\Phi_D = D \cdot A$，二者关于时间的变化率分别为$\frac{dD}{dt} = \frac{d\sigma}{dt} =j$，$\frac{d\Phi_D}{dt} = A \frac{d\sigma}{dt} = i$，且方向相同，因此说明虽然传导电流在两极板间中断，但存在着与传导电流等价的电通量变化率
+
+故有：$j_d = \frac{dD}{dt}	\\	i_d = \frac{d\Phi_D}{dt} = \varepsilon_0 \frac{d\Phi_E}{dt}$
+
+==注意，真空中$\vec P = 0$，因此有$\vec E = \vec E_0$与$\vec D = \varepsilon_0 \vec E$==
+
+##### 全电流
+
+全电流安培环路定理
+
+$$
+\mathop\oint_L \vec B \cdot d\vec l
+= \mu_0(\sum(i+i_d))
+= \mu_0(\sum i + \mathop\oint_A \frac{\partial \vec D}{\partial t}\cdot d \vec S)
+$$
+
+#### 麦克斯韦方程组
+
+**真空条件下**(否则本来应该用D与H来表示)
+$$
+\left \{ \begin{array}{}
+	\mathop\oint_A \vec E \cdot d \vec A = \frac{\sum q}{\varepsilon_0}
+	\\
+	\mathop\oint_A \vec B \cdot d \vec A = 0
+	\\
+	\mathop\oint_L \vec E \cdot d \vec l = -\int \frac{\partial \vec B}{\partial t} \cdot d \vec A
+	\\
+	\mathop\oint_L \vec B \cdot d \vec l = \mu_0(\sum i + \varepsilon_0\int \frac{\partial \vec E}{\partial t} \cdot d \vec A)
+\end{array} \right.
+
+\Longrightarrow
+
+\left \{ \begin{array}{}
+	\nabla \cdot \vec E = \frac{\rho}{\varepsilon_0}
+	\\
+	\nabla \cdot \vec B = 0
+	\\
+	\nabla \times \vec E = -\frac{\partial \vec B}{\partial t}
+	\\
+	\nabla \times \vec B = \mu_0(j + \varepsilon_0\frac{\partial \vec E}{\partial t})
+\end{array} \right.
+$$
