--- a/普物2重要公式.md
+++ b/普物2重要公式.md
@@ -1,6 +1,6 @@
 ##### 电学
 
-###### 主要框架
+###### 主要公式
 
 * 库仑定律
 * 高斯定律
@@ -35,8 +35,8 @@ C_{PP}=\frac{\varepsilon_0A}d\\
 C_柱=2\pi\varepsilon_0\frac L{ln(R)-ln(r)}\\
 C_球=\frac{4\pi\varepsilon_0}{\frac1r-\frac1R}
 =4\pi\varepsilon_0(\frac{Rr}{R-r})\\
-U=\frac{q^2}{2C}=\frac{q\Delta V}2\\
-u_{PP}=\frac U \Omega=\frac{\varepsilon_0E^2}2\\
+U = \frac{q^2}{2C}=\frac{q\Delta V}2\\
+u = \frac{\varepsilon_0E^2}2\\
 $$
 
 ###### 电介质
@@ -58,11 +58,23 @@ P_{\vec n} = \sigma'
 \\
 \mathop\oiint_s\vec P \cdot d \vec A = - \sum_{ins}q'_i
 \\
-\vec D = \varepsilon_0 \vec E + \vec P = (\kappa_e \varepsilon_0) \vec E
+\vec D = \varepsilon_0 \vec E + \vec P = (\kappa_e \varepsilon_0) \vec E = \varepsilon_0 \vec E_0
 \\
 \oiint \vec D \cdot d \vec A = \sum_{ins}q_0
 \\
 $$
+
+CXY定理
+$$
+\left \{ \begin{array} {}
+	D=\varepsilon_0E_0
+	\\
+	\varepsilon_0E=\varepsilon_0(E_0-E') 
+	\\
+	P=\varepsilon_0E'
+\end{array} \right.
+$$
+
 
 ###### 电流
 
@@ -79,9 +91,9 @@ $$
 
 ##### 磁学
 
-新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
+> 新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
 
-###### 主要框架
+###### 主要公式
 
 * 毕奥萨瓦尔
 * 安培环路
@@ -98,7 +110,7 @@ $$
 \\
 \vec \tau = \vec \mu \times \vec B
 \\
-U(\theta) = -\vec \mu \cdot \vec B
+U = -\vec \mu \cdot \vec B
 $$
 
 ###### 电生磁
@@ -125,5 +137,29 @@ $$
 $$
 \varepsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt}
 \\
+= -\int \frac{\partial \vec B}{\partial t} \cdot d\vec A【感生】
+\\
+= \int (\vec v \times \vec B) \cdot d \vec l【动生】
+\\
+= -L\frac{di}{dt}
+,L = \frac{N\Phi_B}{i}【电感】
 $$
+
+###### 能量
+
+$$
+U = \frac{Li^2}2
+\\
+u = \frac{B^2}{2\mu_0}
+$$
+
+###### 磁质
+
+| 电                                                           | 磁                                                           |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
+| $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
+| $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
+| $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
+| $\oint \vec D \cdot d \vec A = \sum_{ins}q_0$                | $\oint \vec H \cdot d \vec l = \sum_{ins}i_0$                |
 
