--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -564,7 +564,9 @@ $$
 - **电偶极子**是两个分隔一段距离，[电量](https://zh.wikipedia.org/wiki/电量)相等，正负相反的[电荷](https://zh.wikipedia.org/wiki/電荷)。
 - **磁偶极子**是一圈封闭循环的[电流](https://zh.wikipedia.org/wiki/電流)。例如一个有常定[电流](https://zh.wikipedia.org/wiki/電流)运行的线圈。
 
-#### Magnetic dipole moment 磁矩μ(Loop Model)
+#### Magnetic dipole moment 磁偶极矩μ(Loop Model)
+
+==磁矩与磁偶极矩量纲有个μ~0~的差别，磁偶极矩是(J/T = (N·m)/($\frac{N}{A\cdot m}$)  = A·m^2^)==
 
 > 由于没有发现单独存在的[磁单极子](https://baike.baidu.com/item/磁单极子/380283)，因此磁偶极子的物理模型不是两个[磁单极子](https://baike.baidu.com/item/磁单极子/380283)，而是一段封闭回路电流。
 
@@ -743,7 +745,7 @@ Ex.
 $$
 \varepsilon - iR - L\frac{di}{dt} = 0
 $$
-此外，到$tau$时的电流还是0.63i和0.37i
+此外，到$tau$时的电流还是0.63i和0.37i ($1-\frac1e$与$\frac1e$)
 
 #### 磁场能量
 
@@ -809,6 +811,7 @@ $\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt}
 | 电                                                           | 磁                                                           |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | D=ε~0~E~0~ <br />E=E~0~-E' <br />P=ε~0~E'                    | H <br />B <br />M                                            |
+| $\vec P = \frac{\sum \vec p_i}{\Omega}$                      | $\vec M = \frac{\sum \vec \mu_i}{\Omega}$                    |
 | $\vec P = \chi_e \varepsilon_0 \vec E$<br />$\vec D = (\kappa_e \varepsilon_0) \vec E$ | $\vec M = \chi_m \vec H$<br />$\vec B = (\mu_r\mu_0) \vec H$ |
 | $\mathop\oint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i$   | $\mathop\oint_s\vec M \cdot d \vec l = \sum_{(ins)}i_m$      |
 | $\vec D = \varepsilon_0 \vec E + \vec P= \varepsilon_0 \vec E_0$ | $\vec H = \frac{\vec B}{\mu_0} - \vec M$                     |
