--- a/概统笔记.md
+++ b/概统笔记.md
@@ -44,49 +44,46 @@ $$
 
 ### 离散型(泊松、、、)
 
-$$
-二项分布\\
---Poisson-泊松分布-distribution--\\
-P(X = K) = \frac {e ^ {-\lambda}\lambda ^ k} {k!}\\
-nota:X\sim P(\lambda)\\
-cha:二项分布中n足够大，p充分小，\lambda = np\\
---超几何分布--\\
---几何分布--\\
-P(X=k) = p(1-p)^{k-1}\\
-查到一次次品时的检查次数X的分布\\
---巴斯卡分布--\\
-nota: X \sim bsk(r,p)\\
-P(X = k) = C_{k-1}^{r-1} p^r (1-p)^{k-r},k = r, r+1, ...;r \in Z^+; 0<p<1 \\
-实验进行到出现r次成功时的实验次数X的分布\\
-$$
+**二项分布**
+
+**泊松(Poisson)分布**
+
+* $P(X = K) = \frac {e ^ {-\lambda}\lambda ^ k} {k!}$
+* $nota:X\sim P(\lambda)$
+* $cha:二项分布中n足够大，p充分小，\lambda = np$
+* $E(X) = Var(X) = \lambda$
+
+**超几何分布**
+
+**几何分布**
+
+* $P(X=k) = p(1-p)^{k-1}$
+* 表示查到一次 次品 时的检查次数X的分布
+
+**巴斯卡分布**
+
+* $nota: X \sim bsk(r,p)\\P(X = k) = C_{k-1}^{r-1} p^r (1-p)^{k-r},k = r, r+1, ...;r \in Z^+; 0<p<1$
+* 表示实验进行到出现r次成功时的实验次数X的分布
 
 ### 连续型(均匀、正态、指数)
 
 **UD**
 
-$nota: X \sim U(a,b)\\$
+* $nota: X \sim U(a,b)\\$
+* $Var(X) = \frac{(b-a)^2}{12}$
 
 **ND**
-$$
-nota: X \sim N(\mu, \sigma^2)\\
-f(x) = \frac 1 {\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}\\
-$$
+
+* $nota: X \sim N(\mu, \sigma^2)$
+* $f(x) = \frac 1 {\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$
 
 **exp D**
-$$
-nota:X \sim E(\lambda)\\
-f(x) = 
-\left \{ \begin{array}{}
-	\lambda e^{-\lambda x} & ,x > 0\\
-	0 & ,x \leqslant 0\\
-\end{array}\right.\\
-F(x) = 
-\left \{ \begin{array}{}
-	1 - e^{-\lambda x} & ,x > 0\\
-	0 & ,x \leqslant 0\\
-\end{array}\right.\\
-无记忆性: P(X > t_0 + t | X > t_0) = P (X > t)\\
-$$
+
+* $nota:X \sim E(\lambda)$
+* $ f(x) =  \left \{ \begin{array}{} \lambda e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.\\ F(x) =  \left \{ \begin{array}{} 1 - e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.$
+* $无记忆性: P(X > t_0 + t | X > t_0) = P (X > t)\\$
+* $E(X) = \frac1\lambda, Var(X) = \frac1{\lambda^2}$
+
 
 ### 正态分布概率计算
 
@@ -174,18 +171,16 @@ $$
 
 ### 分布模型
 
-#### 均匀分布
+#### 二元均匀分布
 
 $$
 
 $$
 
-#### 正态分布
+#### 二元正态分布
 
-$$
-(X,Y) \sim N(\mu_1,\mu_2,\sigma_1^2,\sigma_2^2,\rho)\\
-X \sim N(\mu_1,\sigma_1^2),Y \sim N(\mu_1,\sigma_1^2),即(X,Y)边际分布为一元正态分布\\
-$$
+* $(X,Y) \sim N(\mu_1,\mu_2,\sigma_1^2,\sigma_2^2,\rho)$
+* $X \sim N(\mu_1,\sigma_1^2),Y \sim N(\mu_1,\sigma_1^2),即(X,Y)边际分布为一元正态分布$
 
 ### 独立性
 
@@ -328,50 +323,41 @@ $$
 #### 随机变量函数
 
 $$
-Y= g(X), 且 \sum/\int |g(x)|f(x) 存在（绝对收敛） \Longrightarrow E(Y) = \int_{-\infty}^{+\infty} g(x)f(x)dx\\
+Y= g(X), 且 \sum/\int |g(x)|f(x) 存在（绝对收敛） \Longrightarrow E(Y) = \int_{-\infty}^{+\infty} g(x)f(x)dx
+\\
 h(X,Y)，若\int h(x,y)dxdy绝对收敛 \Longrightarrow E(h(X,Y))
-= \iint h(x,y)f(x,y)dxdy\\
+= \iint h(x,y)f(x,y)dxdy
+\\
+如E(XY) = \int_{-\infty}^{+\infty} \int_{-\infty}^{+\infty} (xy)f(x,y)dydx
 $$
 
 #### 性质
 
 **线性组合**
 
-$E(c_0 + \sum_{i=1}^n c_iX_i) = c_0 + \sum_{i=1}^nE(X_i)$
+$\displaystyle E(c_0 + \sum_{i=1}^n c_iX_i) = c_0 + \sum_{i=1}^nE(X_i)$
 
-**独立**
+**独立性**
 
-$X,Y独立 \Longrightarrow E(XY) = E(X)E(Y) \\ *此结论为必要不充分条件$
+$X,Y独立 \Longrightarrow E(XY) = E(X)E(Y)$
+
+<u>* 此结论为必要不充分条件</u>
 
 #### EG
 
-**Ex1**.不运用分布律求解期望(一般利用独立性)
+**Ex1**.**不运用分布律求解期望**(一般<u>利用独立性</u>)
 
 1. 电梯载12人，10层楼全下完，求停留次数X期望
-   $$
-   X_i = 
-   \left \{ \begin{array}{}
-   	1,i层有人下\\
-   	0,i层无人下\\
-   \end{array} \right.
-   \\
-   则X = \sum X_i
-   \\
-   E(X_i) = P(X_i = 1) = 1 - 0.9^{12}
-   \\
-   E(X) = 10E(X_i) =
-   $$
+   $X_i = \left \{ \begin{array}{} 1,i层有人下\\ 0,i层无人下\\ \end{array} \right. \\ 则X = \sum X_i \\ \forall i \in [1,10], E(X_i) = P(X_i = 1) = 1 - 0.9^{12} \\ E(X) = 10E(X_i) = $
    
 2. n人互赠礼物，求拿到自己礼物人数期望
-   $$
-   E(X) = n \times \frac1n = 1
-   $$
+   $ E(X) = n \times \frac1n = 1 $
 
 ### 方差
 
 #### 定义
 
-nota: $Var(X), D(X), V(X)$
+nota: $Var(X), D(X), V(X),\sigma^2(X)$
 
 Def: $D(X) = E\{[X-E(X)]^2\}$
 
@@ -390,13 +376,13 @@ $Var(X) = 0 \Longleftrightarrow P(X=const) = 1, const = E(X)$
 
 **线性组合**
 
-$Var(X+Y) = Var(X)+Var(Y) +2E\{[X-E(X)][Y-E(Y)]\}$
+==$Var(X+Y) = Var(X)+Var(Y) +2Cov(X,Y)$==
 
-$协方差Cov(X,y) \triangleq E\{[X-E(X)][Y-E(Y)]\}$
+协方差 $Cov(X,Y) \triangleq E[(X-E(X))(Y-E(Y))]$
 
 **独立性**
 
-$独立\Longrightarrow Cov(X,Y) = 0 \Longrightarrow Var(aX+bY+c) = a^2Var(X) + b^2Var(Y)$
+独立 $\Longrightarrow Cov(X,Y) = 0 \Longrightarrow Var(aX+bY+c) = a^2Var(X) + b^2Var(Y)$
 
 Proof：
 $$
@@ -416,18 +402,26 @@ $$
 
 - **泊松分布**
 
+  $Var(X) = \lambda$
+
 - **均匀分布**
 
+  $Var(X) = \frac{(b-a)^2}{12}$
+
+- **指数分布**
+  
+  $Var(X) = \frac{1}{\lambda^2}$
+  
 - **二项分布**
   
   **暴力算法**
   
-  $X \sim B(n,p)	\\	E(X) = \sum_{k=1}^n k(\frac{n!}{k!(n-k)!})p^k(1-p)^{n-k}	\\	= np \sum_{k=1}^n (\frac{(n-1)!}{(k-1)!(n-k)!})p^{k-1}(1-p)^{n-k}	\\	= np \sum_{k=1}^n C_{n-1}^{k-1}p^{k-1}(1-p)^{(n-1)-(k-1)}	\\	= np$
+  ${\displaystyle X \sim B(n,p)	\\	\displaystyle E(X) = \sum_{k=1}^n k(\frac{n!}{k!(n-k)!})p^k(1-p)^{n-k}	\\	\displaystyle = np \sum_{k=1}^n (\frac{(n-1)!}{(k-1)!(n-k)!})p^{k-1}(1-p)^{n-k}	\\	\displaystyle = np \sum_{k=1}^n C_{n-1}^{k-1}p^{k-1}(1-p)^{(n-1)-(k-1)}\\= np}$
   
   **利用独立性和两点分布结论与方差**
   
+  - $X \sim B(n,p),X_i \sim B(p),X = \sum X_i$
   - $E(X) = E(\sum X_i) = \sum E(X_i) = np$
-  
   - $Var(X) = Var(\sum X_i) = \sum Var(X_i) = np(1-p)$
   
 - **正态分布**
@@ -440,56 +434,66 @@ $$
   - E(X) = 0
   - Var(X) = 1
 
-|      |      |      |
-| ---- | ---- | ---- |
-|      |      |      |
-|      |      |      |
-|      |      |      |
-|      |      |      |
-|      |      |      |
-|      |      |      |
-
 **Ex**.
 
 X~P($\lambda$)，求E(X(X-1)(X-2))
 
-$E() = \sum_{k=0}^\infty k(k-1)(k-2)\frac{\lambda^k e^{-\lambda}}{k!} = \sum_{k=3}^\infty \frac{\lambda^k e^{-\lambda}}{(k-3)!} = \lambda^3$
+$\displaystyle E(X(X-1)(X-2)) = \sum_{k=0}^\infty k(k-1)(k-2)\frac{\lambda^k e^{-\lambda}}{k!} = 3 \times 0 + \sum_{k=3}^\infty \frac{\lambda^k e^{-\lambda}}{(k-3)!} = \lambda^3$
 
 #### 正态分布性质
 
 $X-Y \sim N(\mu_1-\mu_2, \sigma_1^2 + \sigma_2^2)$
 
-$标准化变量X^* = \frac{X - \mu}{\sigma}$
+标准化变量：$X^* = \frac{X - \mu}{\sigma}$
+
+#### EG
+
+1. 还是互赠礼物的那题，求X方差
+   
+   $\displaystyle Var(X_i) = \frac1n(1-\frac1n) \\ \displaystyle E(X_iX_j) = P(ij同时拿到) = \frac1{n(n-1)} \\ \displaystyle Cov(X_i,X_j) = E(X_iX_j)-E(X_i)E(E_j) = \frac1{n(n-1)} - \frac1{n^2} = \frac1{n^2(n-1)} \\ \displaystyle Var(X) = \sum_{i=1}^{n} Var(X_i) + 2\sum_{1 \leqslant i < j \leqslant n} Cov(X_i,X_j) \\ \displaystyle = n \times \frac1n(1-\frac1n) + 2 \times \frac{n(n-1)}2 \times \frac1{n^2(n-1)} = 1$
+
+
+
+| 分布      | 分布律或密度函数                                             | 数学期望            | 方差                    |
+| --------- | ------------------------------------------------------------ | ------------------- | ----------------------- |
+| 0-1分布   |                                                              | $p$                 | $p(1-p)$                |
+| B(n,p)    |                                                              | $np$                | $np(1-p)$               |
+| P(λ)      | $P(X=k) = \frac{\lambda^ke^{-k}}{k!} \\ k=0,1,2,...$         | ==$\lambda$==       | ==$\lambda$==           |
+| U(a,b)    |                                                              | $\frac{a+b}2$       | $\frac{(a-b)^2}{12}$    |
+| E(λ) vv   | $f(x) =  \left \{ \begin{array}{} \lambda e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.\\ F(x) =  \left \{ \begin{array}{} 1 - e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.$ | ==$\frac1\lambda$== | ==$\frac1{\lambda^2}$== |
+| N(μ,σ^2^) | $f(x) = \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$<br />N/A | $\mu$               | $\sigma^2$              |
+
+<center><b>表：一些模型的数学期望与方差</b></center>
 
 ### 协方差
 
 #### 定义
 
-$Cov(X,y) \triangleq E\{[X-E(X)][Y-E(Y)]\}$
+$Cov(X,Y) \triangleq E[(X-E(X))(Y-E(Y))]$
 
 **计算公式**
 
-$Cov(X,Y) = E(XY) -E(X)E(Y)$
+* $Cov(X,Y) = E(XY) -E(X)E(Y)$
+* $\displaystyle Cov(X,Y) = \sum_{i=1}^{+\infty}\sum_{j=1}^{+\infty}(x_i-E(X))(y_j-E(Y))p_{ij}$
+* $\displaystyle Cov(X,Y) = \int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}(x-E(X))(y-E(Y))f(x,y)dxdy$
 
 #### 性质
 
 **线性性质**
 
-$Cov(aX,bY) = ab \cdot Cov(X,Y)$
-
-$Cov(X_1+X_2,Y) = Cov(X_1,Y) +Cov(X_2,Y)$
+* $Cov(aX,bY) = ab \cdot Cov(X,Y)$
+* $Cov(X_1+X_2,Y) = Cov(X_1,Y) +Cov(X_2,Y)$
 
 **特殊**
 
-$Var(X)Var(Y) \neq 0时，Cov^2(X,Y) \leqslant Var(X)Var(Y)，当且仅当X与Y有严格线性关系时取等$
+* $Cov(X,X) = Var(X)$
+* $Var(X)Var(Y) \neq 0时，Cov^2(X,Y) \leqslant Var(X)Var(Y)，当且仅当X与Y有严格线性关系时取等$
 
 **Ex**.
 
-$Cov(aX+bY,cX+dY) = $
-
-$Cov(aX+bY+c) = $
-
-$Var(\sum X_i) = $
+1. $\displaystyle Cov(aX+bY,cX+dY) = acVar(X) + bdVar(Y) + (ad+bc)Cov(X,Y)$
+2. $\displaystyle Var(aX+bY+c) = a^2Var(X) + b^2Var(Y) + 2abCov(X,Y)$
+3. $\displaystyle Var(\sum_{i=1}^n X_i) = \sum_{i=1}^n Var(X_i) + 2 \sum_{1 \leqslant i<j \leqslant n} Cov(X_i,Y_j)$
 
 ### 相关系数ρ
 
@@ -499,6 +503,23 @@ $\rho_{XY} = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}	\\	= Cov(\frac{X-E(X)}{\sqrt{V
 
 #### 性质
 
-$|\rho| \leqslant 1$
+* $|\rho| \leqslant 1$
+* $|\rho| = 1 \Longleftrightarrow X,Y间存在严格线性关系(\exist 常数a,b, s.t.P(Y = a + bX) = 1), \\ 特别的,\left\{\begin{array}{}	\rho = 1, b>0 \\ \rho = -1, b<0	\end{array}\right.$
 
-$|\rho| = 1 \Longleftrightarrow \exist 常数a,b, s.t.P(Y = a + bX) = 1, \\ 特别的,\left\{\begin{array}{}	\rho = 1, b>0 \\ \rho = -1, b<0	\end{array}\right.$
+#### 不相关
+
+##### 定义：满足一下三条任一
+
+1. Cox(X, Y) = 0​
+2. E(XY) = E(X)·E(Y)
+3. Var(X + Y) = Var(X) + Var(Y)
+
+*注：13等价(不相关)，2更强一些(独立)*
+
+特别的，对于二元正态分布N(μ~1~, μ~2~, σ~1~^2^, σ~2~^2^, ρ)，不相关与独立等价
+
+
+
+
+
+> 随机变量X满足$f(X) = \frac{e^{-|x|}}2,-\infty<x<+\infty$，则如何说明X与|X|是不独立的
