--- a/Assembly笔记/19-10-30.md
+++ b/Assembly笔记/19-10-30.md
@@ -1,4 +1,4 @@
-# Oct30
+# 19-10-30
 
 ### 文本模式Text Mode
 
@@ -108,8 +108,8 @@ assume cs:code
 code segment
 start:
 	mov cx,16
-	mov dl,0
-	mov di,0
+	mov dl,0  ; 表颜色
+	mov di,0  ; 表地址
 
 	mov ax,0a000h
 	mov es,ax
@@ -142,7 +142,7 @@ code ends
 end start
 ```
 
-效果：<img src="Oct30.assets/image-20191030220002652.png" alt="image-20191030220002652" style="zoom:35%;" />
+效果：<img src="19-10-30.assets/image-20191030220002652.png" alt="image-20191030220002652" style="zoom:35%;" />
 
 改进测试程序(显示256色)
 
@@ -152,8 +152,8 @@ assume cs:code
 code segment
 start:
 	mov cx,256
-	mov dl,0
-	mov di,0
+	mov dl,0  ; 表颜色
+	mov di,0  ; 表地址
 
 	mov ax,0a000h
 	mov es,ax
@@ -289,7 +289,7 @@ code ends
 end main
 ```
 
-效果：<img src="Oct30.assets/image-20191030205011440.png" alt="image-20191030205011440" style="zoom: 15%;" />
+效果：<img src="19-10-30.assets/image-20191030205011440.png" alt="image-20191030205011440" style="zoom: 15%;" />
 
 cnt.asm
 
@@ -345,4 +345,4 @@ code ends
 end main
 ```
 
-效果：<img src="Oct30.assets/image-20191030205217341.png" alt="image-20191030205217341" style="zoom:15%;" />
+效果：<img src="19-10-30.assets/image-20191030205217341.png" alt="image-20191030205217341" style="zoom:15%;" />
