--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -4,7 +4,7 @@
 >
 > 1. 施青松老师要求逻辑证明题要写出两补之间是用什么公式推出的
 
-## 布尔代数
+## Ch1&2 布尔代数
 
 ### Basic Equation
 
@@ -194,7 +194,9 @@ M~i~+M~j~=1
 
 ##### Relationship
 
+==Miniterm(E+F) = Miniterm(E) + Miniterm(F); Miniterm(E·F) = Miniterm(E) · Miniterm(F);==
 
+可以表示成$\displaystyle\sum$或$\displaystyle\prod$的形式
 
 
 
@@ -307,8 +309,8 @@ reg [7:0] C;
 
 **两种实现方式**
 
-- 2*NAND2 + NAND_Latch
-- 2*AND2 + NOR_Latch
+- 2 × NAND2 + NAND_Latch
+- 2 × AND2 + NOR_Latch
 
 | 状态   | C    | S    | R    |
 | ------ | ---- | ---- | ---- |
@@ -337,3 +339,112 @@ D指的是Data
 ### 进阶
 
 #### 触发器
+
+* **正边(上升)沿D触发器**
+  * DLatch + SRLatch + 2 × NOR
+  * symbol：C处有尖角
+* **负边(下降)沿D触发器**
+  * DLatch + SRLatch + 1 × NOR
+  * symbol：C处有尖角，外侧有小圆
+
+#### Moore & Mealy
+
+* **Moore**：只依赖当前
+
+  * Outputs are a function ONLY of states
+
+  Ex.
+
+  ```mermaid
+  
+  ```
+  
+* **Mealy**：依赖当前和输出
+
+  * Outputs are a function of inputs AND states
+  
+  Ex.
+  
+  ```mermaid
+  graph LR
+  
+  0 --X=1/Y=0--> 1
+  1 --X=0/Y=0--> 0
+  0 --X=0/Y=0--> 0
+  1 --X=1/Y=1--> 1
+  ```
+
+#### State Table
+
+==注意：输出值一般是与当前量有关==
+
+**Ex**.
+
+对于：
+
+$D_A = B  \\  D_B = \overline{(A \oplus X)} = A \odot X  \\  Y = (A \oplus X) \oplus B$
+
+==$\because Q = D(C上升), \therefore A(t+1) = D_A(t)$==
+
+| A(t) | X(t) | B(t) | A(t+1) | B(t+1) | Y(t) |
+| ---- | ---- | ---- | ------ | ------ | ---- |
+| 0    | 0    | 0    | 0      | 1      | 0    |
+| 0    | 0    | 1    | 1      | 1      | 1    |
+| 1    | 0    | 0    | 0      | 0      | 1    |
+| 1    | 0    | 1    | 1      | 0      | 0    |
+| 0    | 1    | 0    | 0      | 0      | 1    |
+| 0    | 1    | 1    | 1      | 0      | 0    |
+| 1    | 1    | 0    | 0      | 1      | 0    |
+| 1    | 1    | 1    | 1      | 1      | 1    |
+
+#### **State Diagram**:
+
+Label form:
+
+* On circle with output included:
+  * state/output
+  * Moore type output depends only on state
+* On directed arc with the output included:
+  * input/output
+  * Mealy type output depends on state and input
+
+### 时序电路设计
+
+**Ex**.
+
+检测1101，注意(110(1)101)
+
+1. **Mealy**
+
+   ABCD分别表示四种状态
+
+   ```mermaid
+   graph LR
+   A --1/0--> B
+   B --1/0--> C
+   C --0/0--> D
+   D --1/1--> B
+   D --0/0--> A
+   B --0/0--> A
+   A --0/0--> A
+   C --1/0--> C
+   ```
+
+   | Present State |      |      |      |      |
+   | ------------- | ---- | ---- | ---- | ---- |
+   |               |      |      |      |      |
+   |               |      |      |      |      |
+   |               |      |      |      |      |
+   |               |      |      |      |      |
+
+2. **Moore**
+
+   * Arcs now show only state transitions
+   * Add a new state E to produce the output 1
+   * Note that the new state, E produces the same behavior in the future as state B. But it gives a different output at the present time. Thus these states do represent a different abstraction of the input history.
+
+   ```mermaid
+   
+   ```
+
+   
