--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -751,7 +751,7 @@ $$
 
 对上述LR电路，有$\varepsilon i = i^2 R + Li\frac{di}{dt}$，故$\large U_B = \int_0^i Lidi = \frac12Li^2$
 
-另外能量密度为$\large u_B = \frac{B^2}{2\mu_0}$
+另外能量密度为$\large u_B = \frac{B^2}{2\mu_0} = \frac{B \cdot H}2$
 
 #### 互感
 
@@ -829,6 +829,10 @@ $\large\frac q C = \varepsilon_L = -L\frac{di}{dt} = -L\frac{d\frac{dq}{dt}}{dt}
 
 ==注意，真空中$\vec P = 0$，因此有$\vec E = \vec E_0$与$\vec D = \varepsilon_0 \vec E$==
 
+##### 位移电流密度
+
+$j_d = \frac{\partial \vec D}{\partial t} = \varepsilon_0\frac{\partial \vec E}{\partial t} + \frac{\partial \vec P}{\partial t}$
+
 ##### 全电流
 
 全电流安培环路定理
@@ -865,3 +869,9 @@ $$
 	\nabla \times \vec B = \mu_0(j + \varepsilon_0\frac{\partial \vec E}{\partial t})
 \end{array} \right.
 $$
+
+#### 振动磁偶极子
+
+$\displaystyle \oint_L \vec E \cdot d \vec l = - \int \frac{\partial \vec B}{\partial t} \cdot d \vec A$
+
+$\displaystyle \oint_L \vec B \cdot d \vec l = \mu_0 \varepsilon_0\int \frac{\partial \vec E}{\partial t} \cdot d \vec A$
