--- a/概统笔记.md
+++ b/概统笔记.md
@@ -180,6 +180,7 @@ $$
 #### 二元正态分布
 
 * $(X,Y) \sim N(\mu_1,\mu_2,\sigma_1^2,\sigma_2^2,\rho)$
+* $\displaystyle f(x,y)=\frac{1}{2\pi \sigma_X\sigma_Y\sqrt{1-\rho^2}}\exp\left(-\frac{1}{1-\rho^2}\left[\frac{(x-\mu_X)^2}{\sigma_X}+\frac{(y-\mu_Y)^2}{\sigma_Y}-\frac{2\rho(x-\mu_X)(y-\mu_Y)}{\sigma_X\sigma_Y} \right]\right)$
 * $X \sim N(\mu_1,\sigma_1^2),Y \sim N(\mu_1,\sigma_1^2),即(X,Y)边际分布为一元正态分布$
 
 ### 独立性
@@ -203,6 +204,10 @@ Def: P\{ X \in D_1, Y \in D_2\} = P\{X \in D_1\} \cdot P\{Y \in D_2\}\\
 $$
 
 #### 多元
+
+#### 不独立判据
+
+==取两个特殊x~0~与y~0~使得$P(X=x_0, Y=y_0)\neq P(X=x_0)P(Y=y_0)$==
 
 ### 随机变量函数(换元)
 
@@ -460,11 +465,10 @@ $X-Y \sim N(\mu_1-\mu_2, \sigma_1^2 + \sigma_2^2)$
 | B(n,p)    |                                                              | $np$                | $np(1-p)$               |
 | P(λ)      | $P(X=k) = \frac{\lambda^ke^{-k}}{k!} \\ k=0,1,2,...$         | ==$\lambda$==       | ==$\lambda$==           |
 | U(a,b)    |                                                              | $\frac{a+b}2$       | $\frac{(a-b)^2}{12}$    |
-| E(λ) vv   | $f(x) =  \left \{ \begin{array}{} \lambda e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.\\ F(x) =  \left \{ \begin{array}{} 1 - e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.$ | ==$\frac1\lambda$== | ==$\frac1{\lambda^2}$== |
+| E(λ)      | $f(x) =  \left \{ \begin{array}{} \lambda e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.\\ F(x) =  \left \{ \begin{array}{} 1 - e^{-\lambda x} & ,x > 0\\ 0 & ,x \leqslant 0\\ \end{array}\right.$ | ==$\frac1\lambda$== | ==$\frac1{\lambda^2}$== |
 | N(μ,σ^2^) | $f(x) = \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$<br />N/A | $\mu$               | $\sigma^2$              |
 
 <center><b>表：一些模型的数学期望与方差</b></center>
-
 ### 协方差
 
 #### 定义
@@ -508,18 +512,138 @@ $\rho_{XY} = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}	\\	= Cov(\frac{X-E(X)}{\sqrt{V
 
 #### 不相关
 
-##### 定义：满足一下三条任一
+##### 定义：满足一下三条任一（均为充要条件）
 
 1. Cox(X, Y) = 0​
 2. E(XY) = E(X)·E(Y)
 3. Var(X + Y) = Var(X) + Var(Y)
 
-*注：13等价(不相关)，2更强一些(独立)*
+*注：这三个是等价互推的*
 
 特别的，对于二元正态分布N(μ~1~, μ~2~, σ~1~^2^, σ~2~^2^, ρ)，不相关与独立等价
 
-
-
-
-
 > 随机变量X满足$f(X) = \frac{e^{-|x|}}2,-\infty<x<+\infty$，则如何说明X与|X|是不独立的
+
+#### 均方差 e
+
+e(a,b)越小，线性相关度越高
+
+### 其他数字特征
+
+* E(X^k^)，k阶(原点)矩
+* E\{\[X-E(X)^k^]}，k阶中心矩
+* E\{X^k^Y^l^}，k阶混合(原点)矩
+* E\{\[X-E(X)^k^]\[Y-E(Y)^l^]\}，k阶混合原点矩
+
+**上α分位数x~α~**
+
+P(X>x~α~) = α
+
+X~0.5~称为中位数
+
+标准正态分布的记为z~α~
+
+### 多元
+
+#### 随机向量的数学期望
+
+#### 协方差矩阵
+
+$$
+\left ( \begin{array} {cccc}
+    Var(X_1) & Cov(X_1,X_2) & ... & Cov(X_1,X_n)
+    \\
+    Cov(X_2,X_1) & Var(X_2) & ... & Cov(X_2,X_n)
+    \\
+    ...
+    \\
+    Cov(X_n,X_1) & Cov(X_n,X_2) & ... & Var(X_n)
+\end{array} \right )
+$$
+
+是个半正定矩阵(非负定)
+
+可以获得n元正态变量的概率密度
+
+设协方差矩阵为C，行列式为|C|，伴随矩阵为C^*^，则$C^{-1} = \frac{C^*}{|C|} = ?$
+
+#### n元正态分布的四条性质
+
+1. n元正态分布任意k元子向量服从k元正态分布
+   1. 特别的，若每个元素服从1元正态分布，X服从n元分布（充要）
+2. 线性组合服从正态分布
+3. 线性变换也服从正态分布
+4. 相互独立 $\Leftrightarrow$ 两两不相关 $\Leftrightarrow$ 协方差为对角矩阵
+
+
+
+## Ch5
+
+### 依概率收敛
+
+依概率收敛的定义与分析中的收敛定义不同
+
+对于随机变量序列X~1~,X~2~,...，若$\exist c, s.t.\forall \varepsilon > 0, \lim_{n\rightarrow +\infty}P\{|X_n - c| \geqslant 0 \} = 0$，则称{T~n~,n>=1}依概率收敛于c
+
+#### 性质
+
+~类似于数列收敛~
+
+若$X_n \xrightarrow{P} a, Y_n \xrightarrow{P} b$，g在(a,b)连续，则有$g(X_n,Y_n) \xrightarrow{P} g(a,b)$
+
+特殊的，若$X_n \xrightarrow{P} a$，f在a连续，则$f(X_n) \xrightarrow{P} f(a)$
+
+。。。
+
+### 两个不等式
+
+#### 马尔科夫不等式
+
+设随机变量X的k阶矩存在(k>=1)，则$\forall \varepsilon > 0$，有$\displaystyle P(|Y| \geqslant \varepsilon) \leqslant \frac{E(|Y|^k)}{\varepsilon^k}$
+
+Proof: 取$Z = \left \{ \begin{array}{cc}
+    \varepsilon, & |Y| \geqslant \varepsilon
+    \\
+    0, & |Y| < \varepsilon
+\end{array} \right. \Rightarrow \displaystyle P(|Y| \geqslant \varepsilon) \xlongequal{E(|Z|^k=\varepsilon^kP(|Y| \geqslant \varepsilon)} \frac{E(|Z|^k)}{\varepsilon^k}\leqslant \frac{E(|Y|^k)}{\varepsilon^k}$
+
+#### 切比雪夫不等式
+
+对$\forall \varepsilon>0$，都有$P(|X-E(X)| \geqslant \varepsilon) \leqslant \displaystyle \frac{Var(X)}{\varepsilon^2}$
+
+Proof: 取马尔科夫中 X=X-E(X)，k=2
+
+### 几个大数定律
+
+#### 弱大数定律
+
+> 对随机变量序列{Y~i~, i>=1}，存在常数序列{c~n~, n>=1}，使得当n-->+∞，有$\displaystyle \frac1n \sum_{i=1}^n Y_i -c_n \xrightarrow{P} 0$，即$\displaystyle \lim_{n\rightarrow\infty} P(|\frac1n \sum_{i=1}^n Y_i -c_n| \geqslant \varepsilon) = 0$，则称{Y~i~, i>=1}服从(弱)大数定理。
+
+#### 切比雪夫大数定律
+
+X~1~, X~2~, ...,X~n~相互独立，期望均为μ，方差相同或有共同的上界，则$\displaystyle \frac1n \sum_{i=1}^n X_i \xrightarrow{P} \mu$
+
+#### 辛钦大数定理
+
+X~1~, X~2~, ...,X~n~独立同分布，期望均为μ，则$\displaystyle \frac1n \sum_{i=1}^n X_i \xrightarrow{P} \mu$
+
+**推论**：X~1~, X~2~, ...,X~n~独立同分布，若h(x)为连续函数，E(h(X~i~))=a存在，则$\displaystyle \frac1n \sum_{i=1}^n X_i \xrightarrow{P} a$
+
+#### 贝努里大数定理
+
+n~A~~B(n,p)，则$\displaystyle \frac{n_A}n \xrightarrow{P} p$
+
+证明思路同下电梯问题
+
+### 中心极限定理
+
+##### 独立同分布的中心极限定理
+
+X~1~, X~2~, ...,X~n~独立同分布，期望均为μ，方差均为σ^2^，则对任意实数x，有$\displaystyle\lim_{n\rightarrow\infty} P(\frac{\displaystyle\sum_{i=1}^nX_i - n\mu}{\sqrt{n}\sigma} \leqslant x) = \Phi(x)$
+
+因此，当n充分大时，有$\displaystyle\sum_{i=1}^nX_i \overset{近似}{\sim} N(n\mu,n\sigma^2) \\ \displaystyle\frac1n\sum_{i=1}^nX_i \overset{近似}{\sim} N(\mu,\frac{\sigma^2}n)$
+
+##### 棣莫弗(de Moivre)拉普拉斯中心极限定理
+
+n~A~~B(n,p)，则有$\displaystyle \lim_{n\rightarrow\infty}P(\frac{n_A-np}{\sqrt{np(1-p)}} \leqslant x)$
+
