--- a/生命科学理论课笔记.md
+++ b/生命科学理论课笔记.md
@@ -33,3 +33,100 @@ CO~2~增加$\Longrightarrow$人会打哈欠（降低代谢减少O~2~消耗）
 
 
 
+# Nov18
+
+## 生物分布性
+
+沙丁鱼伪装成海豚
+
+* 分布式、去中心化
+* 鱼群伪装成蝠鲼
+
+
+
+如何在最短时间抓到最多蚂蚁
+
+* 扔果核在地上
+* 挥发性食物、信息素
+
+
+
+人类最佳身高是约1.3m，所以为何选择高个子？以及为什么都选择高个，身高却没有高到三米多？
+
+* 太矮：动能小，伤害力低
+* 太高：容易摔死
+
+
+
+加拿大一枝黄花(?)，在不同位置开花高度不同
+
+
+
+马拉松队伍的形状变化
+
+
+
+自疏现象：
+
+$\left\{\begin{array}{} 正常：随机分布 \\ 高竞争：等距分布\\ 互惠：集群分布 \end{array} \right.$
+
+
+
+## 生物智慧
+
+螵蛸：螳螂的巢，由其体液而成，之余树枝下侧
+
+
+
+**动物保护手段**
+
+* 保护色
+* 警戒色
+* 拟态
+  * 隐蔽拟态
+    * 兰花螳螂
+    * 竹节虫
+    * 比目鱼
+  * 标志拟态
+    * 蝴蝶眼状花纹
+
+
+
+**植物保护手段**
+
+* 土壤条件好，长地上部分
+
+* 土壤条件差，长地下部分
+  * 靠真菌的作用也可以发展地上部分
+* 去除顶端优势
+  *  使顶端变嫩被吃掉/砍掉
+* 定期砍树
+* 无人管理必火烧 $\Longrightarrow$ 自然演替的必要过程
+
+
+
+**动植物区别**
+
+* 营养方式
+  * 能否光合作用
+  * 植物：自养(光合)、寄生、腐生、取食
+* 身体组成方式
+  * 植物：大部分是构件生物
+    * 一个植物体由不同构件组成，一个构件都可以独立发育成一个完整植株
+    * 非构件植物：如棕榈科植物
+  * 动物：大部分单件生物
+    * 构件动物：蚂蟥、蚯蚓，一分为二后可以继续
+* 繁殖方式
+  * 植物：大部分雌雄同株
+    * 很多是两性花
+  * 动物：有明显性别分化
+    * 雌雄同体：藤壶、蚯蚓、陆地蜗牛
+* 生活方式（繁殖方式与生活方式有关
+  * 植物：故着生活
+  * 动物：
+
+
+
+乌龟与鳖(王八)区别
+
+​	鳖没有硬壳，靠进水里躲避天敌
