--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -330,9 +330,9 @@ D指的是Data
 | 复位 | 1    | 0    |
 | 置位 | 1    | 1    |
 
-#### 局限
+#### 锁存器局限
 
-##### 时序问题
+**时序问题**
 
 一个触发周期内会一直改变输出无法只改变一次，会不断变化（称为分块）
 
@@ -349,21 +349,63 @@ D指的是Data
 
 #### Moore & Mealy
 
-* **Moore**：只依赖当前
+主要区别在于[]中的只有输出还是输入和输出都有
+
+* **Moore**：输出**只**依赖<u>当前</u>
 
   * Outputs are a function ONLY of states
-
-  Ex.
+* On circle with output included:
+    * <u>[state/output]</u>
 
   ```mermaid
+  graph LR
   
+  a(state/output)
+  b(state/output)
+  
+  a --input--> b
+  a --input--> a
+  b --input--> b
+  b --input--> a
   ```
   
-* **Mealy**：依赖当前和输出
+  **Ex**.  X is input; state/output in the [].
+  
+  当然state/output也可以是010/01这样的多位的，Ex里state是用dec表示bin，或者你<u>也可以用字母或其他符号表示状态</u>
+  
+  ```mermaid
+  graph LR
+  
+  a(0/0)
+  b(1/0)
+  c(2/1)
+  a --X=1--> b
+  b --X=0--> a
+  a --X=0--> a
+  b --X=1--> c
+  c --X=1--> c
+  c --X=0--> a
+  ```
+  
+* **Mealy**：输出依赖<u>当前和输入</u>
 
   * Outputs are a function of inputs AND states
+  * On directed arc with the output included:
+    * <u>--input/output--></u>
   
-  Ex.
+  ```mermaid
+  graph LR
+  
+  a(state)
+  b(state)
+  
+  a --input/output--> b
+  a --input/output--> a
+  b --input/output--> b
+  b --input/output--> a
+  ```
+  
+  **Ex**. X is input; Y is output; wires state in the [].
   
   ```mermaid
   graph LR
@@ -384,7 +426,7 @@ D指的是Data
 
 $D_A = B  \\  D_B = \overline{(A \oplus X)} = A \odot X  \\  Y = (A \oplus X) \oplus B$
 
-==$\because Q = D(C上升), \therefore A(t+1) = D_A(t)$==
+==注意触发器的函数，即Q是否与D相等，此处$\because Q = D(C上升), \therefore A(t+1) = D_A(t)$==
 
 | A(t) | X(t) | B(t) | A(t+1) | B(t+1) | Y(t) |
 | ---- | ---- | ---- | ------ | ------ | ---- |
@@ -416,13 +458,20 @@ Label form:
 
 1. **Mealy**
 
-   ABCD分别表示四种状态
+   ABCD分别表示四种状态，x表示输入
 
+   | Present State | Next State (x=0) | Next State (x=1) | Output (x=0) | Output (x=1) |
+   | ------------- | ---------------- | ---------------- | ------------ | ------------ |
+   | A             | A                | B                | 0            | 0            |
+   | B             | A                | C                | 0            | 0            |
+   | C             | D                | C                | 0            | 0            |
+   | D             | A                | B                | 0            | **1**        |
+   
    ```mermaid
    graph LR
    A --1/0--> B
    B --1/0--> C
-   C --0/0--> D
+C --0/0--> D
    D --1/1--> B
    D --0/0--> A
    B --0/0--> A
@@ -430,21 +479,39 @@ Label form:
    C --1/0--> C
    ```
 
-   | Present State |      |      |      |      |
-   | ------------- | ---- | ---- | ---- | ---- |
-   |               |      |      |      |      |
-   |               |      |      |      |      |
-   |               |      |      |      |      |
-   |               |      |      |      |      |
-
 2. **Moore**
 
    * Arcs now show only state transitions
    * Add a new state E to produce the output 1
    * Note that the new state, E produces the same behavior in the future as state B. But it gives a different output at the present time. Thus these states do represent a different abstraction of the input history.
 
-   ```mermaid
+   | Present State | Next State (x=0) | Next State (x=1) | Output |
+   | ------------- | ---------------- | ---------------- | ------ |
+   | A             | A                | B                | 0      |
+| B             | A                | C                | 0      |
+   | C             | D                | C                | 0      |
+   | D             | A                | E                | 0      |
+   | E             | A                | C                | **1**  |
    
+   ```mermaid
+   graph LR
+   
+   a(A/0)
+   b(B/0)
+   c(C/0)
+   d(D/0)
+   e(E/1)
+   
+   a --0--> a
+   a --1--> b
+   b --0--> a
+   b --1--> c
+   c --1--> c
+   c --0--> d
+   d --1--> e
+   d --0--> a
+   e --1--> c
+   e --0--> a
    ```
-
+   
    
