--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -875,3 +875,67 @@ $$
 $\displaystyle \oint_L \vec E \cdot d \vec l = - \int \frac{\partial \vec B}{\partial t} \cdot d \vec A$
 
 $\displaystyle \oint_L \vec B \cdot d \vec l = \mu_0 \varepsilon_0\int \frac{\partial \vec E}{\partial t} \cdot d \vec A$
+
+#### 电磁波的性质
+
+$\omega = \frac{1}{\sqrt{LC}}$
+
+$c^2 = \frac{1}{\varepsilon_0\mu_0}$
+
+* E(z,t) = E~m~sin(kz-ωt)
+* B(z,t) = B~m~sin(kz-ωt)
+
+这个偏微分方程的形式与电位移，磁场强度也有关系。此处仅与电场强度和磁感应强度有关的是导出式
+
+$\frac{\partial \vec E}{\partial z} = - \frac{\partial \vec B}{\partial t} \xRightarrow{变化的磁场产生电场} kE_msin(kz-ωt) = \omega B_msin(kz-ωt) \\ \Longrightarrow \frac E B = \frac{E_m}{B_m} = \frac\omega k = c$
+
+#### Poynting Vector & Intensity
+
+> $\vec S = \vec E \times \vec H$
+
+> Def $P = \frac{P}{A}$
+
+$P = \overline S = S_{avg}$
+
+==注意：电磁波传播方向与坡印廷矢量相同==
+
+**S的变形**：
+
+利用公式$c^2 = \frac{1}{\varepsilon_0\mu_0}$与$\frac E B = c$
+
+$\vec S = \frac{\vec E \times \vec B}{\mu_0} =$
+
+### Ch32 Alternating Field and Current
+
+#### 三种负载
+
+* Resistance
+  * $\Delta V_R = i_mRsin(\omega t - \phi)$
+  * 同相位
+* Inductor
+  * $\Delta V_L = L\frac{di}{dt} = L\omega i_m sin(\omega t - \phi + \frac\pi 2)$
+  * 滞后
+  * $X_L = \omega L$
+* Capacitor
+  * $\Delta V_C = \frac{q}{C} = \frac{i_m}{\omega C}sin(\omega t - \phi - \frac\pi 2)$
+  * 提前
+  * $X_C = \frac{1}{\omega C}$
+
+将(ΔV, θ)体现在极坐标上，则可以获得$\varepsilon_m = \sqrt{(\Delta V_R)_m^2 + [(\Delta V_L)_m - (\Delta V_C)_m]^2} = i_m\sqrt{R^2 + (X_L - X_C)^2}$
+
+且位移角$\phi = \frac{(\Delta V_L)_m - (\Delta V_C)_m}{(\Delta V_R)_m} = \frac{X_L-X_C}{X_R}$
+
+当位移角为0时，产生共振(resonance)
+
+#### 功率
+
+**Average Power**
+
+$P_av = i_{rms}^2 R$
+
+($i_rms = \sqrt{(i^2)_{avg}}$)
+
+对于正弦/余弦型的电源，$i_{rms} = \frac i {\sqrt{2}}$
+
+**Power of EMF**
+
