--- a/Assembly笔记/_汇编总结.md
+++ b/Assembly笔记/_汇编总结.md
@@ -6,11 +6,15 @@
 >
 > [高分：为什么立即数不能直接赋给段寄存器-CSDN论坛](https://bbs.csdn.net/topics/340215235)
 
-
+---
 
 能用于[]中的寄存器：变址（index，指SI, DI）或基址（base，指BX, BP）寄存器。
 
+---
 
+==第一个是字母的前面要加个0，如0A000h==
+
+---
 
 源程序中的[ads]不表示(DS:[ads])，会被masm当做数值ads处理
 
@@ -18,14 +22,14 @@
 
 但若[寻址寄存器]，则会默认为是偏移地址
 
-
+---
 
 扩充包括零扩充及符号扩充两种。
 原变量为非符号数，补0；
 原变量为符号数，补1；
 跟目标是否是符号数无关
 
-
+---
 
 画图
 
@@ -48,9 +52,9 @@ mov ax, 0003h
 int 10h; 切换到80*25文本模式
 ```
 
+---
 
-
-int 21h
+**int 21h**
 
 ah = 1h：读入一个字符，存在AL(按回车则是0Dh而不是0Ah)
 
@@ -58,9 +62,9 @@ ah = 9h：输出首地址存在DX的'$'结尾的字符串
 
 ah = 2h：输出DL中单个字符
 
+---
 
-
-#### add(mov, sub同)
+**add(mov, sub同)**
 
 * 操作数
   * add reg, reg
