--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -514,4 +514,23 @@ C --0/0--> D
    e --0--> a
    ```
    
-   
+#### 状态赋值
+
+**方法**
+
+* 直接按顺序
+* 用格雷码
+  * 优点：与K-Map适配
+* 特殊的
+  * 单热点(one-hot)赋值
+
+<u>例题见中文版P160开始</u>
+
+#### Unused State的处理
+
+根据具体情况有三种方式，具体操作见习题4-29
+
+* 
+* 
+* 
+
