--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -923,7 +923,7 @@ $\vec S = \frac{\vec E \times \vec B}{\mu_0} =$
 
 将(ΔV, θ)体现在极坐标上，则可以获得$\varepsilon_m = \sqrt{(\Delta V_R)_m^2 + [(\Delta V_L)_m - (\Delta V_C)_m]^2} = i_m\sqrt{R^2 + (X_L - X_C)^2}$
 
-且位移角$\phi = \frac{(\Delta V_L)_m - (\Delta V_C)_m}{(\Delta V_R)_m} = \frac{X_L-X_C}{X_R}$
+且位移角$\phi = atan(\frac{(\Delta V_L)_m - (\Delta V_C)_m}{(\Delta V_R)_m}) = atan(\frac{X_L-X_C}{X_R})$
 
 当位移角为0时，产生共振(resonance)
 
@@ -931,11 +931,19 @@ $\vec S = \frac{\vec E \times \vec B}{\mu_0} =$
 
 **Average Power**
 
-$P_av = i_{rms}^2 R$
+$P_{av} = i_{rms}^2 R$
 
 ($i_rms = \sqrt{(i^2)_{avg}}$)
 
 对于正弦/余弦型的电源，$i_{rms} = \frac i {\sqrt{2}}$
 
 **Power of EMF**
+
+$P_{av} = \frac{\varepsilon_mi_mcos\phi}2$
+
+功率因子：$cos\phi = \frac{R}{\sqrt{R^2 + (X_L - X_C)^2}}$
+
+#### Transformer变压器
+
+等效电阻$Z_{eq} = (\frac{N_p}{N_s})^2 Z$（若是升压则等效电阻更小）
 
